Update and modified

--- a/Thesis2025_Hanatani/Thesis2025/1_Intro.tex
+++ b/Thesis2025_Hanatani/Thesis2025/1_Intro.tex
@@ -24,7 +24,7 @@
 また、末梢系から認知系のどの部位の機能低下によるものかも解明されていない。
 そこで、まずは聴覚末梢系の機能低下だけが、感情知覚にどの程度影響するかの調査を試みた。
 そこでは、若年健聴者に模擬難聴処理を行った音声を聴かせ、通常音声を聴いた場合との感情知覚の相違を実験的に検討した。
-さらに、高齢難聴者の感情知覚特性を、同じ通常音声を用いて同じ手順で測定した。
+さらに、高齢者の感情知覚特性を、同じ通常音声を用いて同じ手順で測定した。
 若年健聴者との相違から知覚特性の情報を得ることを目指した。
 
 % SciRep
@@ -52,33 +52,32 @@
 % 本研究の将来的な目標は,老人性難聴者を含む他者への感情伝達特性を解明し,定式化することである.これにより,
 % 補聴器の開発や超高齢社会における対人コミュニケーションの改善に繋がると考える.
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{感情の心理学論について（仮）}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\label{sec:感情心理学}
-%\ 感情について
-%SciRep
-% 感情に関する心理学理論は大きく分けて2つある： 
-% エクマンの基本感情理論では、感情はカテゴリー的に存在するとし、ラッセルの中核感情理論16では、感情は心理的空間の次元に位置するとする。
-% どちらが正しいのか、両者は両立するのか、両者の関係はどうなっているのか、いまだに不明である。
-% ラッセルの2次元モデルは、感情間の多次元的な関係を投影したものに過ぎないのかもしれない。
-% 感情間の距離を適切に測定できれば、その関係を多次元構造として研究することが可能になる。
-% このアプローチの重要な点は、多次元構造を比較することにより、老若男女間の年齢効果を調べることができること、また、その結果を補聴器の新しいアルゴリズムを開発するための感情知覚の聴覚モデルを構築する際の重要な制約条件として用いることができることであろう。
-% 知覚距離の推定には、感情認識性能6-14ではなく、感情ペア間のカテゴリー知覚の心理測定関数4が使えると仮定した。
-
-%
-% しかし、異なる感情間の刺激の連続性を用意することが不可欠であり、人間の自然な音声でこれを実現することはほとんど不可能である。
-%  音声モーフィングを使ったこのような実験の初期の試みがある4。
-% モーフィングされた特徴は、基本周波数のF0、音素のタイミング、強弱に限定されていたが、当時知られていた技術を考えると、これは良いアプローチであった。
-% しかし現在では、高品質の音声分析・修正・合成システムであるSTRAIGHT17,18や、その後継システムであるWORLD19を用いて、より優れた実験刺激を作成できるようになりました。
-% 例えば、スピーカーの大きさを知覚する実験20,21が行われ、聴覚モデルの制約に用いられています22。
-% これらの実験での音声修飾は、平滑化されたスペクトログラムの比較的単純なスペクトルの拡張と収縮によって行われたが、GUIを備えた最近の音声モーフィングツール23を使用して、対応する特徴点を正しく割り当てれば、同じ単語の2つの音声の中間音を生成することも可能である。
-
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{研究目的}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \label{sec:研究目的}
+
+本研究の目的は、高齢者の感情知覚特性について調査することである。
+そのために、2つの実験を実施する。
+
+1つ目は、若年健聴者実験である。
+若年健聴者に難聴者の聞こえを体験させる「模擬難聴システムWHIS」（以下WHIS）を用いた聴取実験を行い、模擬難聴が感情知覚に与える影響を調査する。
+通常音声を聞いた場合と、模擬難聴処理した音声を聞いた場合の結果に差異があるかどうかを確かめる。
+WHISを用いて実験を行う理由は以下である。
+加齢性難聴の原因は様々であり、聴覚末梢系の機能低下によるものか、中枢系・認知系の機能低下によるものかの切り分けが困難である。
+どの原因がどの程度感情知覚に影響するのかを段階的に調査するために、まずは模擬難聴処理で聴覚末梢系の機能低下だけを模擬することにした。
+したがって、WHISで処理した音声を聞いた若年健聴者を「模擬難聴者」として実験を行う（詳しくは,第\ref{sec:感情知覚実験}章で説明する）。
+
+2つ目は、高齢者実験である。
+若年健聴者実験と同じ通常音声・手順で実験的に測定を行う。
+若年健聴者結果と比較することで、聴覚末梢系の機能低下による感情知覚への影響があるかどうかを検証する。
+また、聴覚末梢系の機能低下以外の要因も調査できると考え、実施することにした。
+
+これらの実験から、若年健聴者が通常音声を聞いた場合・若年健聴者が模擬難聴処理音声を聞いた場合・高齢者が通常音声を聞いた場合の
+感情音声の弁別性能を比較する。
+これらの3条件の違いから、高齢者の感情知覚特性について新たな知見を得ることを目的とした。
+
 
 %SciRep
 % 第一の研究課題に答えるためには、高齢者では変動が大きい聴覚経路や認知の要因を除外し、末梢HLのみがパーフォーマンスに及ぼす影響を特定する必要もある。
@@ -90,15 +89,16 @@
 % 若年NH（YNH）参加者が通常の音を聞いた場合、同じYNH参加者がHL模擬音を聞いた場合、高齢参加者が同じ通常の音を聞いた場合の識別性能を比較した。
 % これら3つの条件の違いから、高齢者の感情知覚の特徴について新たな知見が得られるかもしれない。
 
-【copied 2022】本研究は,健聴者に難聴者の聞こえを体験させる「模擬難聴システムWHIS」（以下WHIS）を用いた聴取実験を行い,
-模擬難聴が感情知覚に与える影響を調査することを目的とする.将来的な目標は,老人性難聴における感情伝達特性の解明と定式化である.
+% 【copied 2022】本研究は,健聴者に難聴者の聞こえを体験させる「模擬難聴システムWHIS」（以下WHIS）を用いた聴取実験を行い,
+% 模擬難聴が感情知覚に与える影響を調査することを目的とする.将来的な目標は,老人性難聴における感情伝達特性の解明と定式化である.
 
 
-WHISを用いて実験を行う理由は以下の2つである.第一に,実際の老人性難聴者を対象とした場合,難聴の原因が末梢系の機能低下によるものか,
-認知機能の低下によるものかの切り分けが困難であり,個人ごとのばらつきも大きい.第二に,新型コロナウイルスの影響もあり高齢者を対象とした実験は難しい.
-このような理由から,WHISで処理した音声を聞いた健聴者を「模擬難聴者」として実験を行う（詳しくは,第\ref{sec:感情知覚実験}章で説明する）.
+% WHISを用いて実験を行う理由は以下の2つである.第一に,実際の老人性難聴者を対象とした場合,難聴の原因が末梢系の機能低下によるものか,
+% 認知機能の低下によるものかの切り分けが困難であり,個人ごとのばらつきも大きい.第二に,新型コロナウイルスの影響もあり高齢者を対象とした実験は難しい.
+% このような理由から,WHISで処理した音声を聞いた健聴者を「模擬難聴者」として実験を行う（詳しくは,第\ref{sec:感情知覚実験}章で説明する）.
 
-本研究では,同一被験者で健聴状態と模擬難聴状態で聴取実験を行い,感情判断の差異をもとに模擬難聴が感情知覚に及ぼす影響について調査する.
+% 本研究では,同一被験者で健聴状態と模擬難聴状態で聴取実験を行い,感情判断の差異をもとに模擬難聴が感情知覚に及ぼす影響について調査する.
+
 
 %%%%%%%%%%%%%
 \section{本論文の構成}
