--- a/Thesis2025_Hanatani/Thesis2025/Reference_29Dec24b.bib
+++ b/Thesis2025_Hanatani/Thesis2025/Reference_29Dec24b.bib
@@ -4199,9 +4199,9 @@ DOI={10.1016/S0167-6393(98)00085-5},
 
 
 @book{furukawa2021chokaku,
-  title={聴覚},
+  title={音響学講座5 聴覚},
     year = {2021},
-    author = {古川 茂人編著},
+    author = {日本音響学会 編 and 古川茂人 編著},
     publisher = {コロナ社}
 }
 
@@ -5060,13 +5060,14 @@ doi={10.1109/TAU.1969.1162058},
 
 % Toshio Irino, "Hearing impairment simulator based on auditory excitation pattern playback: WHIS," IEEE access, Vol.11, pp.78419--78430, 25 July 2023 [DOI: 10.1109/ACCESS.2023.3298673] (Open Access) *
 
-@article{irino2023hearing,
-  title={Hearing impairment simulator based on auditory excitation pattern playback: WHIS},
-  author={Irino, Toshio},
-  journal={IEEE access},
-  year={2023},
-  publisher={IEEE}
-}
+% article %{ irino2023hearing,
+%   title={Hearing impairment simulator based on auditory excitation pattern playback: WHIS},
+%   author={Irino, Toshio},
+%   journal={IEEE access},
+%   year={2023},
+%   publisher={IEEE}
+% }
+
 
 
 @inproceedings{mori2024chouryoku,
@@ -5144,3 +5145,208 @@ Praat, a system for doing phonetics by computer.
   year={2014},
     publisher={日本音響学会}
 }
+
+
+%%------------- ここから新たに追加 ----------------%%
+
+@book{ogushi2019Book,
+    title={音響聴覚心理学},
+    author={大串健吾},
+    publisher={誠信書房},
+    year={2019},
+}
+
+
+@article{furukawa2017chokaku,
+    title = {{聴覚末梢系の概要(---小特集---聴覚末梢系に係る最近の研究事例)}},
+    year = {2017},
+    journal = {日本音響学会誌},
+    author = {茂人, 古川},
+    number = {10},
+    pages = {639--644},
+    volume = {73},
+    doi = {10.20697/jasj.73.10{\_}639}
+}
+
+@article{furukawa2016time,
+  title   = {聴覚の時間情報処理},
+  author  = {古川茂人},
+  journal = {AUDIOLOGY JAPAN},
+  volume  = {59},
+  number  = {6},
+  pages   = {615--622},
+  year    = {2016}
+}
+
+
+@unpublished{higashiyama2020WHIS,
+    title={模擬難聴システムWHISを用いた発声訓練音声の明瞭性評価と音響特徴量分析},
+    author={東山宗一},
+    note={和歌山大学大学院システム工学研究科, 修士論文},
+    year={2020},
+}
+
+@unpublished{yamamoto2019OIM,
+    title={聴覚計算理論に基づく音声了解度の客観評価指標},
+    author={山本克彦},
+    note={和歌山大学大学院システム工学研究科, 博士論文},
+    year={2019},
+}
+
+@unpublished{nagae2016WHIS,
+    title={聴覚の圧縮特性のキャンセル処理による模擬難聴とその応用},
+    author={永江美沙貴},
+    note={和歌山大学大学院システム工学研究科, 修士論文},
+    year={2016},
+}
+
+@unpublished{yamamoto2023GESI,
+    title={高齢難聴者の音声了解度予測を目指した客観評価指標{GESI}の開発},
+    author={山本絢子},
+    note={和歌山大学大学院システム工学研究科, 修士論文},
+    year={2023},
+}
+
+@article{Schuknecht1993presbycusis,
+  title    = {Cochlear pathology in presbycusis},
+  author   = {Schuknecht, Harold F. and Gacek, Mark R.},
+  journal  = {Annals of Otology},
+  booktitle = {Rhinology & Laryngology.},
+  volume   = {102},
+  pages    = {1--16},  
+  year     = {1993},
+}
+
+@article{tuiki2003eldery,
+  title   = {加齢による聴力悪化の計算式},
+  author  = {立木孝 and 一戸孝七},
+  journal = {AUDIOLOGY JAPAN},
+  volume  = {46},
+  number  = {4},
+  pages   = {235--240},
+  year    = {2003}
+}
+
+
+
+@book{furui1985digital,
+  title={ディジタル音声処理},
+  author={古井貞煕},
+  year={1985},
+  publisher={東海大学出版会}
+}
+
+@article{shirasawa1996Emo,
+    title = {音声が人間に与える感性情報の分析},
+    year = {1996},
+    journal = {テレビジョン学会技術報告},
+    author = {敏行,白澤 and  義弘,加藤 and  昇,大西},
+    number = {38},
+    pages = {47--52},
+    volume = {20},
+    doi = {10.11485/tvtr.20.38{\_}47}
+}
+
+@article{shigeno2004Emo,
+    title = {感情を表現した音声の認知と音響的性質},
+    year = {2004},
+    journal = {心理学研究},
+    author = {純,重野},
+    number = {6},
+    pages = {540--546},
+    volume = {74},
+    doi = {10.4992/jjpsy.74.540}
+}
+
+@article{sakuraba2004Emo,
+    title = {「ピカチュウ」にこめられた感性情報},
+    year = {2004},
+    journal = {音声研究},
+    author = {京子,櫻庭 and  敏,今泉 and  一彦,筧},
+    number = {1},
+    pages = {77--84},
+    volume = {8},
+    doi = {10.24467/onseikenkyu.8.1{\_}77}
+}
+
+@article{sawamura2007Emo,
+    title = {Common factors in emotion perception among different cultures},
+    year = {2007},
+    journal = {Proc.ICPhS},
+    author = {Sawamura,K and Dang,J and  Akagi,M and Erickson,D and Li,A and Sakuraba,K and Minematsu,N and Hirose,K},
+    pages = {2113--2116}
+}
+
+@article{akagi2010EmoSpace,
+    title = {音声に含まれる感情情報の認識ー感情空間をどのように表現するかー},
+    year = {2010},
+    journal = {日本音響学会誌},
+    author = {正人,赤木},
+    number = {8},
+    pages = {393--398},
+    volume = {66},
+    doi = {10.20697/jasj.66.8{\_}393}
+}
+
+
+
+@article{kawahara2009tandem,
+    title = {{TANDEM-STRAIGHTと音声モーフィング : 感情音声と歌唱研究への応用(<特集>音声が伝達する感性領域の情報の諸相)}},
+    year = {2009},
+    journal = {音声研究},
+    author = {英紀,河原 and 将雅,森勢},
+    number = {1},
+    pages = {29--39},
+    volume = {13},
+    doi = {10.24467/onseikenkyu.13.1{\_}29}
+}
+
+@article{matsui2003STRAIGHT,
+  title={STRAIGHTによる感情モーフィング音声の知覚と変換関数の構造について},
+  author={松井九美 and 河原英紀},
+  journal={電子情報通信学会技術研究報告},
+  volume={103},
+  number={27},
+  pages={63--68},
+  year={2003},
+  publisher={電子情報通信学会}
+}
+
+@article{kawahara2013morph,
+    title = {Temporally variable multi-aspect N-way morphing based on interference-free speech representations},
+    year = {2013},
+    journal = {Proc.APSIPA ASC},
+    author = {H.Kawahara and M. Morise and V.G. Skuk},
+    pages={1--10},
+    publisher={IEEE}
+}
+
+@article{kawahara2014morph,
+    title = {音声の実時間表示とモーフィングで探る声の多様性},
+    year = {2014},
+    journal = {音声研究},
+    author = {河原英紀},
+    number = {3},
+    pages = {43--52},
+    volume = {18},
+    doi = {10.24467/onseikenkyu.18.3{\_}43}
+}
+
+@inproceedings{sakamoto2020morphEmo,
+  title={同一話者による平静音声と怒り音声のモーフィングに対する感情知覚},
+  author={坂本拓也 and 坂下尚史 and 河原英紀 and 松井淑恵},
+  booktitle={日本音響学会秋季研究発表会講演論文集},
+  volume={3--S2--5},
+  pages={599--600},
+  year={2020}
+}
+
+@inproceedings{sakamoto2021morphEmo,
+  title={同一話者による怒り音声と喜び音声のモーフィングに対する感情知覚},
+  author={坂本拓也 and 坂下尚史 and 河原英紀 and 松井淑恵},
+  booktitle={日本音響学会春季研究発表会講演論文集},
+  volume={2--4P--7},
+  pages={671--674},
+  year={2021}
+}
+
