--- a/Thesis2025_Hanatani/Thesis2025/1_Intro.tex
+++ b/Thesis2025_Hanatani/Thesis2025/1_Intro.tex
@@ -67,7 +67,7 @@
 WHISを用いて実験を行う理由は以下である。
 加齢性難聴の原因は様々であり、聴覚末梢系の機能低下によるものか、中枢系・認知系の機能低下によるものかの切り分けが困難である。
 どの原因がどの程度感情知覚に影響するのかを段階的に調査するために、まずは模擬難聴処理で聴覚末梢系の機能低下だけを模擬することにした。
-したがって、WHISで処理した音声を聞いた若年健聴者を「模擬難聴者」として実験を行う（詳しくは,第\ref{sec:感情知覚実験}章で説明する）。
+したがって、WHISで処理した音声を聞いた若年健聴者を「模擬難聴者」として実験を行う（詳しくは,第\textcolor{red}{☆☆☆}章で説明する）。
 
 2つ目は、高齢者実験である。
 若年健聴者実験と同じ通常音声・手順で実験的に測定を行う。
