--- a/Thesis2025_Hanatani/Thesis2025/4_ExpCalm.tex
+++ b/Thesis2025_Hanatani/Thesis2025/4_ExpCalm.tex
@@ -1,8 +1,8 @@
 \newpage
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\chapter{補聴器信号処理による評価}
-\label{chap:Evaluate_HA}
+\chapter{落着きと怒り・悲しみ・喜び間の弁別実験}
+\label{chap:ExpCalm}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 難
