--- a/Thesis2025_Hanatani/Thesis2025/3_ExpAngHapSad.tex
+++ b/Thesis2025_Hanatani/Thesis2025/3_ExpAngHapSad.tex
@@ -5,3 +5,24 @@
 \label{chap:ExpAngHapSad}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+高齢難聴者の感情音声知覚特性を調べるために、「怒り」「悲しみ」「喜び」の3感情間のモーフィング音声を用いて、
+若年健聴者と高齢者を対象にした感情弁別実験を実施した。
+先行研究\cite{hanatani2023Emo}の結果を受けて、複数の単語が収録された新たな音声データベース\cite{keioESD-J}を使用した。
+まず、聴覚末梢系の機能低下だけが感情知覚に与える影響を調べるために、若年健聴者には模擬難聴処理を行った音声を聴かせて、
+通常音声を聴いた場合との感情知覚の相違を検討する。
+次に、高齢者にも同じ通常音声を用いて実験を行い、若年健聴者の結果と比較する。
+
+ここでは、はじめに実験刺激の作成方法と実験条件、実験手順について説明する。
+その上で、若年健聴者・高齢者の実験結果をそれぞれ示し、結果を比較する。
+若年健聴者が通常音声を聞いた場合、同じ若年健聴者が模擬難聴音を聞いた場合、高齢者が同じ通常音声を聞いた場合の
+弁別精度を比較し、これら3つの条件の違いから、高齢者の感情知覚の特徴について調査していく。
+
+% ------------------------------
+\subsection{実験刺激の作成}
+\label{sec:PrepareStimuli}
+% ------------------------------
+
+% ------------------------------
+\subsubsection{感情音声のスクリーニング}
+% ------------------------------
