--- a/Thesis2025_Hanatani/Thesis2025/Reference_29Dec24b.bib
+++ b/Thesis2025_Hanatani/Thesis2025/Reference_29Dec24b.bib
@@ -5207,6 +5207,13 @@ Praat, a system for doing phonetics by computer.
     year={2023},
 }
 
+@unpublished{hanatani2023Emo,
+    title={喜びと悲しみの間の音声感情知覚における模擬難聴処理の影響},
+    author={花谷幸歩},
+    note={和歌山大学大学院システム工学部, 卒業論文},
+    year={2023},
+}
+
 @article{Schuknecht1993presbycusis,
   title    = {Cochlear pathology in presbycusis},
   author   = {Schuknecht, Harold F. and Gacek, Mark R.},
