--- a/Thesis2025_Hanatani/Thesis2025/Reference_29Dec24b.bib
+++ b/Thesis2025_Hanatani/Thesis2025/Reference_29Dec24b.bib
@@ -5099,8 +5099,8 @@ doi={10.1109/TAU.1969.1162058},
 }
 
 @inproceedings{hanatani2024onsei,
-  title={音声からの感情弁別に対する難聴の影響 ー 高齢難聴者と模擬難聴者の実験 ー},
-  author={花谷幸歩, 岸田一馬, 内藤朱里, 河原英紀, 入野俊夫},
+  title={音声からの感情弁別に対する難聴の影響 --高齢難聴者と模擬難聴者の実験-- },
+  author={花谷幸歩 and 岸田一馬 and 内藤朱里 and 河原英紀 and 入野俊夫},
   booktitle={日本音響学会聴覚研究会資料},
   volume={54,H-2024-44},
   pages={227--232},
