--- a/Thesis2025_Hanatani/Thesis2025/1_Intro.tex
+++ b/Thesis2025_Hanatani/Thesis2025/1_Intro.tex
@@ -101,7 +101,7 @@ WHISを用いて実験を行う理由は以下である。
 
 
 %%%%%%%%%%%%%
-\section{本論文の構成}
+\section{\textcolor{red}{本論文の構成}}
 %%%%%%%%%%%%%
 \label{sec:本論文の構成}
 【copied 2022】本論文は,本章を含め6章で構成されている.第1章では,本研究の背景と目的について示した.第2章では,聴覚に関する基本的な知識と,音声と感情知覚に
