--- a/Thesis2025_Hanatani/Thesis2025/3_ExpAngHapSad.tex
+++ b/Thesis2025_Hanatani/Thesis2025/3_ExpAngHapSad.tex
@@ -13,7 +13,7 @@
 通常音声を聴いた場合との感情知覚の相違を検討する。
 次に、高齢者にも同じ通常音声を用いて実験を行い、若年健聴者の結果と比較する。
 
-ここでは、はじめに実験刺激の作成方法と実験条件、実験手順について説明する。
+ここでは、はじめに実験刺激の作成方法と実験手順、実験条件について説明する。
 その上で、若年健聴者・高齢者の実験結果をそれぞれ示し、結果を比較する。
 若年健聴者が通常音声を聞いた場合、同じ若年健聴者が模擬難聴音を聞いた場合、高齢者が同じ通常音声を聞いた場合の
 弁別精度を比較し、これら3つの条件の違いから、高齢者の感情知覚の特徴について調査していく。
@@ -94,3 +94,80 @@ PC2まで、累積寄与率84\%を占めた。
 
 
 \input{Fig2_MorphingAligner.tex}
+
+% ------------------------------
+\subsubsection{模擬難聴処理}
+% ------------------------------
+
+\ref{sec:研究目的}節で述べたように、若年健聴者実験では通常音声と模擬難聴音声の対比を行う。
+モーフィングで合成した上記の210音声（以下では、無処理の意味で"Unpro"と呼ぶ）と対比するために、
+模擬難聴システムWHIS\cite{irino2023hearing}を用いて、模擬難聴音声を作成した。
+本実験では、80歳の平均聴力レベル \cite{tsuiki2002nihon_Jpn}、圧縮特性健全度を中程度の$\alpha=0.5$と設定した。
+すなわち、125,250,500,1000,2000,4000,8000Hzで、24,24,27,28,33,48,69dBとした。
+つまり、500~Hzから4000~Hzの平均聴力レベルは34dBである。
+得られた210個の模擬難聴音声を、以降"80yr"と呼ぶ。
+
+
+\newpage
+% ------------------------------
+\section{実験手順と実験条件}
+\label{sec:ExpCondition}
+% ------------------------------
+前節で述べた実験刺激を用いて、若年健聴者と高齢者を対象に感情弁別実験を行った。
+参加者は「怒り--悲しみ」対、「悲しみ--喜び」 対、「喜び--怒り」対の3つの実験すべてに参加した。
+実験は和歌山大学の倫理委員会の承認を受けており、実験前に説明を行ってインフォームドコンセントを得た。
+
+実験には恒常法を用い、基準となるモーフィング率50\%の音声(標準刺激)と、その他のモーフィング率の音声(比較刺激)を1対で順番に提示した。
+手掛語として表示される感情ラベル（例えば悲しみ）に、どちらの音声が近いかを二肢強制選択で回答させた。
+この手掛語（悲しみ）の実験が終わった後、対の手掛語（喜び）の実験を全く同じ刺激を用いて行った。
+全ての実験は防音室内で専用のWebページを用いて行った。
+
+
+% ------------------------------
+\subsubsection{若年健聴者実験}
+% ------------------------------
+
+若年健聴者実験では、無処理音(Unpro)と模擬難聴音(80yr)の両方を使った。
+したがって、刺激対は、10単語$\times$標準刺激と比較刺激の組み合わせ6組$\times$音声処理条件(Unpro/80yr)2条件$\times$提示順のカウンタバランス2条件=240対である。
+提示順は基本的に参加者ごとにランダムで、1セッションあたり各12の音声対の全20セッションとした。
+ただし、Unproと80yrは音圧が異なるため、別セッションに割り当てることでセッション内ではどちらかの条件に統一されている。
+
+また、感情判断においてバイアスがないかを調べるために、判断させる感情を入れ替えて2回実験した。
+具体的に、例えば悲しみ--喜び対の実験で説明する。
+まず、全240対の比較において、「悲しみ」という手掛語を提示し、どちらの音声がより「悲しみ」に聞こえるかを判断させた。
+その後、全く同じ実験刺激対を用いて、手掛語をもう一方の感情（喜び）に入れ替えて判断させ、反応バイアスがあるかどうかを調べた。
+すなわち、1人の実験参加者は、全480対を聴取した。
+どちらの手掛語が先かや、どの感情対の実験から始めるかは、参加者間でバランスを取った。
+
+参加者は、20歳から24歳の日本人大学生12名（男性7名、女性5名）であった。
+全員が125Hzから8000Hzの範囲で聴力レベルが25\,dB以下で健聴者であることを確認した。
+
+
+% ------------------------------
+\subsubsection{高齢者実験}
+% ------------------------------
+
+高齢者実験は若年健聴者実験と手順は同じである。
+ただし、Unpro音声だけを実験刺激として、80yrの模擬難聴音は使用しない。
+したがって刺激対は、10単語$\times$標準刺激と比較刺激の組み合わせ6組$\times$提示順のカウンタバランス2条件=120対である。
+% 健聴者実験の半分なので全10セッションとした。
+提示順は基本的にランダムで、1セッションあたり各12の音声対を聞き、全10セッションに分けた。
+感情判断に用いる手掛語は若年健聴者実験と同様に2通り設定した。
+一方の手掛語の全120対の実験が終了した後、もう一方の手掛語の実験を全く同一の刺激セットで実施した。
+すなわち、1人の実験参加者は、全240対を聴取した。
+どちらの手掛語から先に始めるかは、全被験者で統一した。
+どの感情対の実験から始めるかは、参加者間でバランスを取った。
+
+シルバー人材センターに依頼して実験参加者を募集した。
+参加者は61歳から81歳の12名（男性9名・女性3名）である。
+参加者のうち2名は、良耳が125Hzから8000Hzの全帯域で聴力レベルが25dB以下であり、健聴レベルであった。
+しかし、残りの10名は高齢難聴の傾向があった。
+500~Hzから4000~Hzの平均聴力レベルは6.3$\sim$28.8dBであった。
+
+
+% from Scirep24　高齢者の聴力について
+% 図2cの統計分析では、高齢の参加者を聴力レベルに応じてNH群とHL群（ONHとOHL）に分けた。
+% ONHは、感情認識研究11の基準に従い、500Hz、1000Hz、2000Hz、4000Hzの聴力レベルの平均が、良い方の耳で22dB以下であると仮定した。
+% また、HLシミュレーションの結果、8000Hzの聴力レベルは感情認知に直接影響しない可能性が示唆されたためである。
+% その結果、参加者はONHが7人、OHLが5人となった。
+%  なお、閾値を25dBに設定した場合でも、図2cの有意な関係は不変であった。
