--- a/Thesis2025_Hanatani/Thesis2025/3_ExpAngHapSad.tex
+++ b/Thesis2025_Hanatani/Thesis2025/3_ExpAngHapSad.tex
@@ -65,6 +65,7 @@ PC2まで、累積寄与率84\%を占めた。
 % \newpage
 % ------------------------------
 \subsubsection{音声モーフィング}
+\label{sec:morphAngSadHap}
 % ------------------------------
 
 抽出した33音声(11単語\time 3感情)について、
@@ -85,7 +86,7 @@ PC2まで、累積寄与率84\%を占めた。
 % また、感情単語として使われる状況を想像しやすいとは思えない。
 そこで、残りの10単語を実験刺激として用いることとした。
 これにより、10単語\time 7モーフィング率\time 3感情間の合計210音声を準備した。
-\textcolor{red}{図4にその音声の配置の概念図を示す。}
+図\ref{fig:ExpRsltEmoPercent}(a)にその音声の配置の概念図を示す。
 
 
 % これは、恒定法で一対比較を行い感情知覚の弁別閾を求めるためである。 
@@ -162,7 +163,7 @@ PC2まで、累積寄与率84\%を占めた。
 参加者は61歳から81歳の12名（男性9名・女性3名）である。
 参加者のうち2名は、良耳が125Hzから8000Hzの全帯域で聴力レベルが25dB以下であり、健聴レベルであった。
 しかし、残りの10名は高齢難聴の傾向があった。
-500~Hzから4000~Hzの平均聴力レベルは6.3$\sim$28.8dBであった。
+500~Hzから4000~Hzの平均聴力レベルは0$\sim$43.8dBであった。
 
 
 % from Scirep24　高齢者の聴力について
@@ -171,3 +172,93 @@ PC2まで、累積寄与率84\%を占めた。
 % また、HLシミュレーションの結果、8000Hzの聴力レベルは感情認知に直接影響しない可能性が示唆されたためである。
 % その結果、参加者はONHが7人、OHLが5人となった。
 %  なお、閾値を25dBに設定した場合でも、図2cの有意な関係は不変であった。
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsubsection{実験機材と提示条件}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+若年健聴者と高齢者で同じ条件で実験を行った。
+若年健聴者実験は暗騒音レベルが約26\,dBの防音室25dBの防音室（Rion, AT62W）内で、
+高齢者実験は暗騒音レベルが約26dBの防音室（YAMAHA, AVITECS）内で実施した。
+実験に使用する音響機材は統制し、提示音は計算機端末(Apple, Mac mini)に接続したDAC (SONY, Walkman 2018モデルNW-A55)経由でヘッドホン(SONY, MDR-1AM2)から両耳に提示した。
+若年健聴者も高齢者でも、Unpro音声の提示音圧レベルが${L_{eq}}$ で65\,dBとなるようにした。
+音圧レベルの測定には、人工耳（Br\"{u}el \& Kj\ae r, Type\,4153）とマイクロホン（Br\"{u}el \& Kj\ae r, Type\,4192）、騒音計（Br\"{u}el \& Kj\ae r, Type\,2250-L）を用いた。
+なお、感覚レベル(Sensation Level)でそろえなかったのは、同じ音圧レベルの話かけに対して同じように聞こえるかを調べるためである。
+聴力レベルが低下していても、十分に聞こえることを確認した。
+
+
+\newpage
+% ------------------------------
+\section{実験結果}
+\label{sec:ResultAngSadHap}
+% ------------------------------
+怒り--悲しみ対、悲しみ--喜び対、喜び--怒り対に関して、標準刺激(50\%モーフィング音)に対して、
+比較刺激の方が手掛語に示された感情に近いと感じた回答率を実験参加者ごとに算出した。
+結果を図\ref{fig:ExpRsltEmoPercent}(b)$\sim$(g)に示す。
+図\ref{fig:ExpRsltEmoPercent}(a)は、\ref{sec:morphAngSadHap}節で述べたモーフィング音声の配置の概念図である。
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsubsection{若年健聴者実験結果}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+図\ref{fig:ExpRsltEmoPercent}中段に、(b)怒り--悲しみ対、(c)悲しみ--喜び対、(d)喜び--怒り対の回答率の、参加者間の平均値と標準偏差を示す。
+なお、\ref{sec:ExpCondition}節で述べたように、感情判断の手掛語は一つの感情ともう片一方の感情を使った。
+感情A-感情Bの対の場合、より感情Aと感じる方を判断させる場合（回答率A\%）と、より感情Bと感じる方を判断させる場合（回答率B\%）である。
+2本の回答曲線を比較しやすいように、Bの回答率は100\%から引いて(100-B)\%で表示している。
+各図には、2つの手掛語、模擬難聴処理の有無(Unpro/80yr)の合計4本の回答曲線を表示している。
+
+結果的に、図\ref{fig:ExpRsltEmoPercent}(b),(c),(d)のいずれの対においても、回答率A\%と(100-B)\%の回答曲線はほとんど重なっていた。
+このことから、手掛語は若年健聴者の感情知覚にほとんど影響しないことがわかった。
+また、全ての対でUnproと80yrの回答曲線がほとんど重なっている。
+このことは、模擬難聴処理は感情弁別に影響していないことを意味する。
+すなわち、模擬している聴覚末梢系の機能低下だけは、感情知覚に影響しないことを示唆する。
+これは、\ref{sec:研究背景}節で紹介した末梢系の機能低下を補う補聴器によっても感情知覚を補助できないという報告\cite{goy2018hearing}と整合性がある。
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsubsection{高齢者実験結果}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+図\ref{fig:ExpRsltEmoPercent}下段に、(e)怒り--悲しみ対、(f)怒り--悲しみ対、(g)喜び--怒り対の回答率の、参加者間の平均値と標準偏差を示す。
+図\ref{fig:ExpRsltEmoPercent}(e)、(f)の2本の回答曲線の傾きは、図\ref{fig:ExpRsltEmoPercent}(a)、(b)の若年健聴者の傾きとそれほど相違がないように見えるが、
+手掛語による差異は若年健聴者よりも大きい。
+このことは、怒り--悲しみ対、怒り--悲しみ対に関しては、手掛語による差異は多少あるものの、若年健聴者とおおむね同様な弁別ができたということを示している
+
+対照的に、図\ref{fig:ExpRsltEmoPercent}(g)の喜び--怒り対の傾きは、図\ref{fig:ExpRsltEmoPercent}(e)怒り--悲しみ対、(f)悲しみ--喜び対、
+及び若年健聴者の(d)喜び--怒り対の傾きと比べてかなり緩やかになっている。
+% この結果は、高齢者は「喜び」と「怒り」の弁別が他の感情対と比べて困難であったことを示唆している。
+個人ごとに回答曲線を見ると、全く判断ができず心理物理曲線がほぼ水平になった参加者もいた。
+また、手掛語による差異は、判断のばらつきが大きかったためと考えられる。
+高齢者では、喜び--怒り対の感情弁別が特に難しかったという内観報告が多く見られた。
+その一方で、若年健聴者においてはそのような報告は2件のみであり、どの感情対も同程度の難しさだと報告した参加者がほとんどであった。
+高齢者と若年健聴者の違いは、考慮すべき最も重要な発見であると言えるだろう。
+
+
+
+\input{Fig3_ResultPsycho_AngSadHap.tex}
+
+
+\clearpage
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsubsection{統計的分析}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+上記の観察結果を統計的いに明確化するため、図\ref{fig:ExpRsltEmoPercent}(b)$\sim$(g)の回答曲線に累積ガウス分布を当てはめ、心理物理曲線を推定した。
+そして、50\%の回答率におけるモーフィング率である主観的等値点（PSE）と、50\%と76\%の回答率間のモーフィング率の差である弁別閾（JND）を算出した。
+% 図\ref{fig:ExpEmo_PSEJND}(a)にJND、(b)にPSEを示す。
+
+
+% 上記の観察結果を統計的に明確化するため、図 6(a)∼(f) の心 理物理曲線から PSE と JND を求めた。表 1 にそれらの平均と 標準偏差の値を示す。また、図 7 に PSE、図 8 に JND を棒グ ラフで示す。図左側が若年健聴者模擬難聴なし(YNH-Unpro)、 中央が若年健聴者の模擬難聴条件 (YNH-80yr)、右側が高齢者
+% (Elderly)の結果である。なお、高齢参加者 1 名の怒り-喜び対の 怒り判断において、心理物理曲線がほぼ水平になり PSE・JND を正常な範囲内で推定できなかったため欠損値として扱った。
+% PSE の平均値に関して、高齢者実験において怒り-喜び対の喜 び判断が他の感情対の値よりも若干大きい結果となった。この 図 7 の 18 条件(YNH-Unpro・YNH-80yr・Elderly、判断法すべ て、感情対すべて)に関して Tukey HSD の多重比較検定を行っ た結果、怒り-喜び対の喜び判断と、怒り-喜び対の怒り判断・悲 しみ-怒り対の悲しみ判断との間にのみ有意差があった。この ことから、高齢者の感情判断においては、怒り-喜び対で判断法 により感情判断にバイアスがある可能性が示唆された。その他 の条件においては有意差は見られず、すべての条件でおおむね 50% に近い値であり、判断にバイアスが無かったことがわかる。
+% JND の平均値に関して、高齢者実験において怒り-喜び対の値 が他の感情対の値よりも 10% ポイント程度大きく突出してい ることがわかる。さらに、標準偏差も他の感情対に対して大き く、参加者によって回答がかなり異なることがわかる。Tukey
+% —5—
+% HSD 検定の結果、高齢者の怒り-喜び対と、他の実験条件・感 情対・判断法すべての間に有意差があることがわかった。他の 感情対間に関しては、若年健聴者・高齢者を通して 11%∼15% 程度で、大きな違いがなく、標準偏差の範囲も重なっている。 また、検定結果に有意差はなく、模擬難聴処理の有無の影響や 感情対の相違による差があるとは言えない。
+% これらのことから、今回参加した高齢者にとって、若年健聴 者と比較しても、怒り-喜び対の判断が他の感情対の判断よりも 難しいことがわかった。
+
+
+% 上記の観察結果を統計的に明確化するため、図\ref{fig:ExpRsltEmoPercent_Cal}(b)$\sim$(g)の回答曲線に累積ガウス分布を当てはめた心理物理曲線から弁別閾(JND)と主観的等価点(PSE)を求めた。図\ref{fig:ExpEmo_PSEJND}(a)にJND、(b)にPSEを示す。
+% 各点は手掛語を示し、対になったものをまとめた箱ひげ図で示す。
+% %上述したように、手掛語によるバイアスはほとんどみられなかったため、反復測定として感情対ごとにまとめた。
+% 図左側が若年健聴者模擬難聴なし（YNH-Unpro)、中央が若年健聴者模擬難聴あり(YNH-80yr)、右側が高齢者（Older-Unpro）の結果である。図中に参加者ごとのJNDを手掛語別に示している。また、9条件（YNH-Unpro・YNH-80yr・Older-Unpro、感情対すべて）に関してTukey HSDの多重比較検定(有意水準5\%)を行った。
+
+
+
+\input{Fig4_JNDPSE_AngSadHap.tex}
