--- a/Thesis2025_Hanatani/Thesis2025/3_ExpAngHapSad.tex
+++ b/Thesis2025_Hanatani/Thesis2025/3_ExpAngHapSad.tex
@@ -166,13 +166,6 @@ PC2まで、累積寄与率84\%を占めた。
 500~Hzから4000~Hzの平均聴力レベルは0$\sim$43.8dBであった。
 
 
-% from Scirep24　高齢者の聴力について
-% 図2cの統計分析では、高齢の参加者を聴力レベルに応じてNH群とHL群（ONHとOHL）に分けた。
-% ONHは、感情認識研究11の基準に従い、500Hz、1000Hz、2000Hz、4000Hzの聴力レベルの平均が、良い方の耳で22dB以下であると仮定した。
-% また、HLシミュレーションの結果、8000Hzの聴力レベルは感情認知に直接影響しない可能性が示唆されたためである。
-% その結果、参加者はONHが7人、OHLが5人となった。
-%  なお、閾値を25dBに設定した場合でも、図2cの有意な関係は不変であった。
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsubsection{実験機材と提示条件}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -198,7 +191,7 @@ PC2まで、累積寄与率84\%を占めた。
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsubsection{若年健聴者実験結果}
+\subsection{若年健聴者実験結果}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 図\ref{fig:ExpRsltEmoPercent}中段に、(b)怒り--悲しみ対、(c)悲しみ--喜び対、(d)喜び--怒り対の回答率の、参加者間の平均値と標準偏差を示す。
 なお、\ref{sec:ExpCondition}節で述べたように、感情判断の手掛語は一つの感情ともう片一方の感情を使った。
@@ -215,7 +208,7 @@ PC2まで、累積寄与率84\%を占めた。
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsubsection{高齢者実験結果}
+\subsection{高齢者実験結果}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 図\ref{fig:ExpRsltEmoPercent}下段に、(e)怒り--悲しみ対、(f)怒り--悲しみ対、(g)喜び--怒り対の回答率の、参加者間の平均値と標準偏差を示す。
 図\ref{fig:ExpRsltEmoPercent}(e)、(f)の2本の回答曲線の傾きは、図\ref{fig:ExpRsltEmoPercent}(a)、(b)の若年健聴者の傾きとそれほど相違がないように見えるが、
@@ -238,27 +231,82 @@ PC2まで、累積寄与率84\%を占めた。
 
 \clearpage
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsubsection{統計的分析}
+\subsection{統計的分析}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 上記の観察結果を統計的いに明確化するため、図\ref{fig:ExpRsltEmoPercent}(b)$\sim$(g)の回答曲線に累積ガウス分布を当てはめ、心理物理曲線を推定した。
 そして、50\%の回答率におけるモーフィング率である主観的等値点（PSE）と、50\%と76\%の回答率間のモーフィング率の差である弁別閾（JND）を算出した。
-% 図\ref{fig:ExpEmo_PSEJND}(a)にJND、(b)にPSEを示す。
+図\ref{fig:JNDPSE_AngSadHap}(a)にJND、(b)にPSEの、参加者間の平均値と95\%信頼区間を示す。
+上述したように、手掛語によるバイアスはほとんどみられなかったため、反復測定として感情対ごとにまとめた。
+図左側が若年健聴者模擬難聴なし（YNH-Unpro）、中央が若年健聴者模擬難聴あり（YNH-80yr）、右側が高齢者（Older-Unpro）の結果である。
+また、9条件（YNH-Unpro・YNH-80yr・Older-Unpro、感情対すべて）に関してTukey HSDの多重比較検定(有意水準5\%)を行った。
+なお、高齢者1名の喜び--怒り対において、心理物理曲線がほぼ水平になりJND、PSEを正常な範囲内で推定できなかったため欠損値として扱った。
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsubsection{(a)JND}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+図\ref{fig:JNDPSE_AngSadHap}(a)のJNDの平均値に関して、高齢者の喜び--怒り(H--A)対の値が他の感情対の値よりも10\%ほど大きく突出している。
+Tukey HSDの多重比較検定(有意水準5\%)の結果、高齢者の喜び--怒り(H--A)対とその他の全実験条件・感情対で有意差があった。
+他の感情対間に関しては、若年健聴者・高齢者を通して11\% $\sim$ 15\% 程度で大きな違いはなく、95\%信頼区間の範囲も重なっている。 
+また、検定結果に有意差はなく、模擬難聴処理の有無の影響や感情対の相違による差があるとは言えない。
+以上より、今回参加した高齢者にとって、若年健聴者と比較しても、喜び--怒り(H--A)対の判断が他の感情対の判断よりも困難であったことがわかった。
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsubsection{(b)PSE}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+図\ref{fig:JNDPSE_AngSadHap}(b)のPSEに関して、高齢者喜び--怒り(H--A)対の95\%信頼区間の値が他の感情対の値よりも若干大きい結果となった。
+そこで、手掛語を区別して同様の検定を行ったところ、高齢者喜び--怒り(H--A)対の喜び判断と怒り判断の間に有意差があった。
+したがって、高齢者においては喜び--怒り(H--A)対で手掛語により感情判断にバイアスがある可能性が示唆されたが、これは高齢者の中に感情弁別が困難であった参加者がいたためである可能性がある。
+しかしながら、全実験条件・感情対でほぼ50\%に近い値となっている。
+高齢者喜び--怒り(H--A)対を除いた他の条件では、判断にバイアスがなかったことがわかる。
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsubsection{(c)高齢者の聴力レベルによる検討}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+高齢参加者の聴力レベルによる感情弁別特性の違いを調べた。
+高齢参加者を500~Hzから4000~Hzの良耳の平均聴力レベルによって、健聴に近い群（22~dB未満, ONH, 7名）と難聴群（22~dB以上, OHL, 5名）に分けた。
+ONHは、従来の感情認識実験\cite{christensen2019effects}の基準に従い、平均聴力レベルが22dB未満であると仮定した。
+なお、閾値をWHO基準の25dBに設定した場合でも、結果は変わらなかった。
+
+図\ref{fig:JNDPSE_AngSadHap}(c)に参加者間のJNDの平均値と95\%信頼区間を示す。
+図左側から、若年健聴者模擬難聴なし（YNH-Unpro）、ONH、OHLの結果である。
+高齢者難聴群の喜び--怒り(H--A)対とその他の全実験条件・感情対、
+高齢者健聴群の喜び--怒り(H--A)対と高齢者健聴群のその他の感情対・若年健聴者の全感情対で有意差があった。
+この結果は、高齢者は健聴・難聴に関わらず喜び--怒り(H--A)対の弁別が難しかったことを示している。
+さらに、高齢者喜び--怒り(H--A)対では、健聴群と難聴群の間でも有意差が見られたことから、年齢が上がるにつれて弁別が難しくなる可能性が示唆された。
 
 
-% 上記の観察結果を統計的に明確化するため、図 6(a)∼(f) の心 理物理曲線から PSE と JND を求めた。表 1 にそれらの平均と 標準偏差の値を示す。また、図 7 に PSE、図 8 に JND を棒グ ラフで示す。図左側が若年健聴者模擬難聴なし(YNH-Unpro)、 中央が若年健聴者の模擬難聴条件 (YNH-80yr)、右側が高齢者
-% (Elderly)の結果である。なお、高齢参加者 1 名の怒り-喜び対の 怒り判断において、心理物理曲線がほぼ水平になり PSE・JND を正常な範囲内で推定できなかったため欠損値として扱った。
-% PSE の平均値に関して、高齢者実験において怒り-喜び対の喜 び判断が他の感情対の値よりも若干大きい結果となった。この 図 7 の 18 条件(YNH-Unpro・YNH-80yr・Elderly、判断法すべ て、感情対すべて)に関して Tukey HSD の多重比較検定を行っ た結果、怒り-喜び対の喜び判断と、怒り-喜び対の怒り判断・悲 しみ-怒り対の悲しみ判断との間にのみ有意差があった。この ことから、高齢者の感情判断においては、怒り-喜び対で判断法 により感情判断にバイアスがある可能性が示唆された。その他 の条件においては有意差は見られず、すべての条件でおおむね 50% に近い値であり、判断にバイアスが無かったことがわかる。
-% JND の平均値に関して、高齢者実験において怒り-喜び対の値 が他の感情対の値よりも 10% ポイント程度大きく突出してい ることがわかる。さらに、標準偏差も他の感情対に対して大き く、参加者によって回答がかなり異なることがわかる。Tukey
-% —5—
-% HSD 検定の結果、高齢者の怒り-喜び対と、他の実験条件・感 情対・判断法すべての間に有意差があることがわかった。他の 感情対間に関しては、若年健聴者・高齢者を通して 11%∼15% 程度で、大きな違いがなく、標準偏差の範囲も重なっている。 また、検定結果に有意差はなく、模擬難聴処理の有無の影響や 感情対の相違による差があるとは言えない。
-% これらのことから、今回参加した高齢者にとって、若年健聴 者と比較しても、怒り-喜び対の判断が他の感情対の判断よりも 難しいことがわかった。
 
 
-% 上記の観察結果を統計的に明確化するため、図\ref{fig:ExpRsltEmoPercent_Cal}(b)$\sim$(g)の回答曲線に累積ガウス分布を当てはめた心理物理曲線から弁別閾(JND)と主観的等価点(PSE)を求めた。図\ref{fig:ExpEmo_PSEJND}(a)にJND、(b)にPSEを示す。
-% 各点は手掛語を示し、対になったものをまとめた箱ひげ図で示す。
-% %上述したように、手掛語によるバイアスはほとんどみられなかったため、反復測定として感情対ごとにまとめた。
-% 図左側が若年健聴者模擬難聴なし（YNH-Unpro)、中央が若年健聴者模擬難聴あり(YNH-80yr)、右側が高齢者（Older-Unpro）の結果である。図中に参加者ごとのJNDを手掛語別に示している。また、9条件（YNH-Unpro・YNH-80yr・Older-Unpro、感情対すべて）に関してTukey HSDの多重比較検定(有意水準5\%)を行った。
-
-
+% from Scirep24　高齢者の聴力について
+% 図2cの統計分析では、高齢の参加者を聴力レベルに応じてNH群とHL群（ONHとOHL）に分けた。
+% ONHは、感情認識研究11の基準に従い、500Hz、1000Hz、2000Hz、4000Hzの聴力レベルの平均が、良い方の耳で22dB以下であると仮定した。
+% また、HLシミュレーションの結果、8000Hzの聴力レベルは感情認知に直接影響しない可能性が示唆されたためである。
+% その結果、参加者はONHが7人、OHLが5人となった。
+%  なお、閾値を25dBに設定した場合でも、図2cの有意な関係は不変であった。
 
 \input{Fig4_JNDPSE_AngSadHap.tex}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsection{考察}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+% 感情知覚は、脳の高次過程で行われていると考えられている が、その神経基盤や機能的な構成もまだよくわかっていない (例 [11])。
+% しかし、何も聞こえなければ知覚もできないことか ら、大脳皮質に至る経路やその表象も、情報伝達の意味で重要 であるのも間違いないであろう。
+% 今回得られた結果は、高齢難 聴における末梢系レベルの機能低下は、感情知覚への影響が小 さいということを示唆している。
+% ある意味、「あたりまえ」と捉 えられるかもしれないが、このように明確に示された研究は報告されていないと思われる。
+% さらに興味深いのは、感情の種類により、高齢者と若年健聴者で知覚特性が異なることが示唆されたことにある。
+% 判断が難しかった怒りと喜びは、図 2 のラッセルの円環モデルにおいて、 「快-不快」軸上で反対側に位置する。
+% 一方、「覚醒-沈静」軸上では原点より上で覚醒レベルが同程度の位置にある。
+% これに対し、 怒りと悲しみ・悲しみと喜びに関しては、「覚醒-沈静」軸上で は反対側に位置している。
+% これらの間の刺激連続体においては 健聴者と同程度の弁別ができた。
+% これらのことから、高齢者は「覚醒-沈静」の度合いが同程度の場合、「快-不快」の判断が難 しい可能性がある。
+% 直感的には「快-不快」の判断の方が容易に 思えるので、この結果の要因が何かがわからない。
+% このことを 確かめるためには、第 4 象限にある Relaxed/At Ease (「安心」) を加えて、安心-悲しみ対や安心-喜び対の実験を行っても良い かもしれない。
+% ただし、今回の実験で用いたのが男性一名の限 られた単語数の音声であったために、このような結果になった 可能性も否定できない。
+% 複数話者の実験も必要であろう。
+% この 場合でも、今回用いた模擬難聴と音声モーフィングを用いた独 自の手法を用いることができ、さらなる知見が期待できる。
+% いずれにせよラッセルの円環モデルは心理空間を構成する一 つの仮説にすぎず、音声の物理的特徴量や聴覚的な内部表現と の関連性は明確ではない。
+%  この両者の関係を聴覚モデルを通し て分析することにより、高齢者の感情知覚特性とそれに影響す る要因の解明へアプローチすることも重要であろう。
+
+
