--- a/Thesis2025_Hanatani/Thesis2025/Fig3_ResultPsycho_AngSadHap.tex
+++ b/Thesis2025_Hanatani/Thesis2025/Fig3_ResultPsycho_AngSadHap.tex
@@ -3,7 +3,7 @@
 % モーフィングの概念図と心理物理曲線（AngSadHap）
 %%%%%%%%%%%%%%%%%%%%%% %%%%%%%%%%%%%%%%%%%%% %%%%%%%%%%%%%%%%%%%%% %%%%%%%%%%%%%%%%%%%%% 
 \begin{figure}[t]
-  \vspace {-20pt}
+  % \vspace {-20pt}
   %%%%%%%%%%%%%%%%%%%%% 上段 morphing 図 %%%%%%%%%%%%%%%%%%%%% 
   
   \begin{center}
