--- a/Thesis2025_Hanatani/Thesis2025/Fig4_JNDPSE_AngSadHap.tex
+++ b/Thesis2025_Hanatani/Thesis2025/Fig4_JNDPSE_AngSadHap.tex
@@ -4,31 +4,33 @@
 %%%%%%%%%%%%%%%%%%%%%% %%%%%%%%%%%%%%%%%%%%% %%%%%%%%%%%%%%%%%%%%% %%%%%%%%%%%%%%%%%%%%% 
 \begin{figure}[t]
   % \vspace {-20pt}
-  %%%%%%%%%%%%%%%%%%%%% 上段 Bargraph %%%%%%%%%%%%%%%%%%%%% 
+  
   
   \begin{tabular}{ccc}
   
-  \begin{minipage} {0.31\hsize}
+  \begin{minipage} {0.32\hsize}
   \centering
   \includegraphics[ width = 1\columnwidth]{Figure/ExpAngHapSad/Fig_YNHEld23_JND_IgnoreCue.eps }
   \end{minipage}&
   
-  \begin{minipage} {0.31\hsize}
+  \begin{minipage} {0.32\hsize}
   \centering
   \includegraphics [ width = 1\columnwidth]{Figure/ExpAngHapSad/Fig_YNHEld23_PSE_IgnoreCue.eps }
-  \end{minipage}& 
-  
-  \begin{minipage} {0.31\hsize}
+  \end{minipage}&
+
+  \begin{minipage} {0.32\hsize}
   \centering
-  \includegraphics [ width = 1\columnwidth]{Figure/ExpAngHapSad/Fig1e_Eld_Raw_AllSbj_sad-ang.eps }
-  % \label{fig:Eld_ExpEmoWHIS_sad-ang }
+  \includegraphics [ width = 1\columnwidth]{Figure/ExpAngHapSad/Fig2c_CalEmoYNHEld_JNDNHHL_Mean4_Thrsh22dB.eps }
   \end{minipage}
   
-  
+
   \end{tabular}
   
   \vspace {-6pt}
-  \caption{テスト。}
+  \caption{実験条件（YNH-Unpro,YNH-80yr,Older-Unpro）ごとにおけるJND(a)とPSE(b)の参加者全体の平均値と、95\%信頼区間。
+            (c)はYNH-Unpro、高齢健聴群（ONH）、高齢者難聴群（OHL）のJNDの平均値と95\%信頼区間。
+            各3組のバーグラフは感情対に対応。怒り (Angry, A), 悲しみ (Sad, S), 喜び (Happy,H) の2つの組み合わせで表示。
+            Tukey HSDの多重比較検定（有意水準 5\%）の結果も示す。}
   
   \label{fig:JNDPSE_AngSadHap}
 
@@ -36,4 +38,14 @@
   \end{figure}
   %%%%%%%%%%%%%%%%%%%%%% %%%%%%%%%%%%%%%%%%%%% %%%%%%%%%%%%%%%%%%%%% %%%%%%%%%%%%%%%%%%%%% 
 
+
+%   実験条件（YNH-Unpro、YNH-80yr、Older-Unpro）における参加者全体のJND（a）とPSE（b）の平均値と95％信頼区間（％）。
+%   A：Ang、S：Sad、H：Hap。パネル(c)は、YNH-Unpro、高齢NH（ONH）、高齢HL（OHL）を比較するためのJNDの平均と95％CIを示す。
+%   Tukey's HSD検定はα=0.05で行った。パネル(a)では、アスタリスク(*)を付けた高齢参加者のHap-Angペアと他のペアとの間に有意差があった。
+%   破線は、最後の2本の棒を除くすべての条件の平均を表す。パネル(b)では、アスタリスク(*)のついたペアは他のペアと有意差があった。
+%   パネル(c)では、古いNHのHap-Angペアとも有意差があった。
+
+%   実験条件（YNH-Unpro,YNH-80yr,Older-Unpro）ごとの JND（a）と PSE（b). 各 3 組のデータは感情対に対応. 落着き (Calm,
+% C), 怒り (Angry, A), 悲しみ (Sad, S), 喜び (Happy,H) の 2 つの組み合わせで表示. 25,50,75 パーセンタイル箱ひげ図で表示. 参加者の
+% JND/PSE を手掛語（怒り*, 悲しみ△, 喜び◯, 落着き■）ごとに示す. Tukey HSD の多重比較検定（有意水準 5%) の結果も示す
 
