--- a/Thesis2025_Hanatani/Thesis2025/1_Intro.tex
+++ b/Thesis2025_Hanatani/Thesis2025/1_Intro.tex
@@ -107,4 +107,5 @@ WHISを用いて実験を行う理由は以下である。
 【copied 2022】本論文は,本章を含め6章で構成されている.第1章では,本研究の背景と目的について示した.第2章では,聴覚に関する基本的な知識と,音声と感情知覚に
 関する知識,先行研究について説明する.第3章では,本実験の詳細な手続きを述べる.第4章では実験結果と統計的分析を行なった結果を示し,第5章で考察を述べる.
 最後に,第6章にて本研究についてまとめる.
+\textcolor{red}{図目次は？？いるか確認}
 
