--- a/Thesis2025_Hanatani/Thesis2025/3_ExpAngHapSad.tex
+++ b/Thesis2025_Hanatani/Thesis2025/3_ExpAngHapSad.tex
@@ -386,6 +386,6 @@ ONHは、従来の感情認識実験\cite{christensen2019effects}の基準に従
 若年健聴者には通常音声と模擬難聴音を、高齢者には同じ通常音を聞かせ、計3条件間の対比を行った。
 その結果、若年健聴者実験では模擬難聴処理の有無でJND、PSEに有意差は無く、聴覚末梢系の機能低下は感情知覚に影響しない可能性が示唆された。
 高齢者実験では、喜び--怒りの判断だけが著しく難しいことがわかった。
-すなわち、高齢者はラッセルの感情円環モデルにおいて、「覚醒--沈静」の度合いが同程度の場合、「快--不快」の判断が難しい可能性がある。
+すなわち、高齢者はラッセルの感情円環モデル\cite{russell1980circumplex}において、「覚醒--沈静」の度合いが同程度の場合、「快--不快」の判断が難しい可能性がある。
 したがって、第4象限に位置するCalm（「落着き」）を加えて弁別実験を行うことが、要因解明の手がかりになるかもしれない。
 
