--- a/Thesis2025_Hanatani/Thesis2025/4_ExpCalm.tex
+++ b/Thesis2025_Hanatani/Thesis2025/4_ExpCalm.tex
@@ -5,4 +5,335 @@
 \label{chap:ExpCalm}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-難
+第\ref{chap:ExpAngHapSad}章の実験では、高齢者にとって喜び--怒りの判断だけが有意に難しいことがわかった。
+そこで、ラッセルの感情円環モデル\cite{russell1980circumplex}との対応関係を用いて考察を進めた。
+そして、覚醒度が同程度である場合、快-不快の判断が難しいという作業仮説を立てた。
+その上で、ラッセルの円環モデル上で悲しみと快-不快軸上で反対にある「落着き」の音声を使って同様な弁別実験を行った。
+
+ここでは、第\ref{chap:ExpAngHapSad}章と同様の構成で、実験手順・実験条件・実験結果について述べる。
+実験結果では、第\ref{chap:ExpAngHapSad}章で行った怒り・悲しみ・喜び間の弁別実験結果と比較することで、作業仮説の検証を行う。
+
+% ------------------------------
+\section{実験刺激の作成}
+%\label{sec:PrepareStimuli}
+% ------------------------------
+怒り・悲しみ・喜び実験（第\ref{chap:ExpAngHapSad}章）と同様な手順で、「落着き」感情を最もよく表現する音声の抽出を行い、
+音声モーフィングと模擬難聴処理で実験刺激を作成した。
+
+% ------------------------------
+\subsubsection{「落着き」感情音声の選別 \textcolor{red}{付録にスクリーニング結果入れる？}}
+% ------------------------------
+使用した元音声は、怒り・悲しみ・喜び実験と同じ慶應義塾大学研究用感情音声データベース（Keio-ESD）\cite{keioESD-J}である。
+用いた単語も同じで、名詞の10単語とした。
+
+今回の実験では、上述の作業仮説を検証するため、「快」かつ「沈静」の感情である「落着き」を新たに導入した。
+実験者3名（著者を含む若年健聴者:日本人大学生と大学院生）で47元感情・10単語の音声を再度全て聞き、「落着き」に感じた発声（48音声）を選別した。
+この48音声に、怒り・悲しみ・喜び実験で用いた30音声を加えた合計78音声を用いて、次の感情尺度評定を行っていく。
+
+
+% \newpage
+
+
+% ------------------------------
+\subsubsection{感情尺度評定と主成分分析}
+% ------------------------------
+選別した78音声に関して、実験者3名が「怒り」「悲しみ」「喜び」「落着き」の4感情を評定軸とした段階尺度評定を行った。
+その上で、全音声・実験者3名の4感情の評定値を変数として主成分分析を行った。
+この結果の第3主成分（PC3）までの分布を図\ref{fig:PCA-Russel_Calm}(c)に示す。
+PC3までで、累積寄与率99\%を占めた。
+図\ref{fig:Fig1_RusselPCA}(a)と同様に、「怒り」「悲しみ」「喜び」の3感情が三角形の頂点付近にそれぞれ分布している。
+一方、落着き音声（黒のx印）は3感情とは逆方向に、三角形を底面とした三角錐の頂点の方向に分布している。
+各単語ごとに、落着きベクトル(Cal)との内積が最も大きい、つまり最も「落着き」らしい10単語を抽出した。
+以上より、同一内容の10単語を4感情分そろえた。
+
+
+\input{Fig5_RusselPCA_Calm.tex}
+
+
+% \newpage
+% ------------------------------
+\subsubsection{音声モーフィング}
+\label{sec:morphCalm}
+% ------------------------------
+
+抽出した40音声（10単語$\times$4感情）について、音声モーフィング用のGUI\cite{kawahara2024interactive}を用いて、
+「怒り--落着き」「悲しみ--落着き」「喜び--落着き」間の中間の音声を合成した。
+合成の手順は怒り・悲しみ・喜び実験と同じで、モーフィング率が0,20,40,50,60,80,100\%の音声を、3つの感情対に関して10単語分作成した。 
+図\ref{fig:ExpRsltEmoPercent_Calm}(a)にその音声の配置の概念図を示す。
+これにより、10単語$\times$7モーフィング率$\times$3感情対の合計210音声を準備した。
+
+% ------------------------------
+\subsubsection{模擬難聴処理}
+% ------------------------------
+
+怒り・悲しみ・喜び実験と同様に、若年健聴者実験では通常音声と模擬難聴音声の対比を行う。
+模擬難聴システムWHIS\cite{irino2023hearing}を用いて、模擬難聴音声を作成した。
+80歳の平均聴力レベル \cite{tsuiki2002nihon_Jpn}、圧縮特性健全度を中程度の$\alpha=0.5$と設定した。
+
+
+\newpage
+% ------------------------------
+\section{実験手順と実験条件}
+\label{sec:ExpCondition_Calm}
+% ------------------------------
+前節で述べた実験刺激を用いて、若年健聴者と高齢者を対象として実験を行った。
+実験手順は怒り・喜び・悲しみ実験と同じである。
+参加者は「怒り--落着き」対、「悲しみ--落着き」対、「喜び--落着き」対の3つの実験すべてに参加した。
+実験は和歌山大学の倫理委員会の承認を受けており、実験前に説明を行ってインフォームドコンセントを得た。
+
+
+% ------------------------------
+\subsubsection{若年健聴者実験}
+% ------------------------------
+
+若年健聴者実験では、無処理音(Unpro)と模擬難聴音(80yr)の両方を使った。
+したがって、刺激対は、10単語$\times$標準刺激と比較刺激の組み合わせ6組$\times$音声処理条件(Unpro/80yr)2条件$\times$提示順のカウンタバランス2条件=240対である。
+提示順は基本的に参加者ごとにランダムで、1セッションあたり各12の音声対の全20セッションとした。
+Unproと80yrは音圧が異なるため、別セッションに割り当てて、セッション内ではどちらかの条件に統一されている。
+また、感情判断においてバイアスがないかを調べるために、判断させる感情を入れ替えて2回実験した（詳細は\ref{sec:ExpCondition}節を参照）。
+すなわち、1人の実験参加者は、全480対を聴取した。
+
+参加者は、21歳から25歳の日本人大学生12名（男女6名ずつ）であった。
+全員が125Hzから8000Hzの範囲で聴力レベルが20\,dB以下で健聴者であることを確認した。
+
+
+% ------------------------------
+\subsubsection{高齢者実験}
+% ------------------------------
+高齢者実験は若年健聴者実験と同様の手順である。
+ただし、Unpro音声だけを実験刺激として、80yrの模擬難聴音ははずした。
+したがって刺激対は、10単語$\times$標準刺激と比較刺激の組み合わせ6組$\times$提示順のカウンタバランス2条件=120対である。
+健聴者実験の半分なので全10セッションとした。
+感情判断に用いる手掛語は若年健聴者実験と同様に2通り設定した。
+すなわち、1人の実験参加者は、全240対を聴取した。
+どちらの手掛語から先に始めるかは、全被験者で統一した。
+どの感情対の実験から始めるかは、参加者間でバランスを取った。
+
+シルバー人材センターに依頼して実験参加者を募集した。
+参加者は62歳から82歳の12名（男9名・女3名）で、内10名は怒り・喜び・悲しみ実験にも参加している。
+%怒り・喜び・悲しみ実験には12名参加していたが、内2名がシルバー人材センターを退会したため、今回は新たに2名追加した。 --- 書く必要なし
+参加者のうち3名は、良耳が125Hzから8000Hzの全帯域で健聴レベルであった。
+しかし、残りは高齢難聴の傾向があった。
+500~Hzから4000~Hzの平均聴力レベルは3.8$\sim$51.3dBであった。
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsubsection{実験機材と提示条件}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+若年健聴者と高齢者で同じ条件で実験を行った。
+聴取実験を暗騒音レベルが約26\,dBの防音室（YAMAHA AVITECS）内で実施した。
+実験に使用する音響機材は、怒り・喜び・悲しみ実験と同様である（詳細は\ref{sec:ExpCondition}節を参照）。
+若年健聴者・高齢者ともに、Unproの音声の提示音圧レベルが${L_{eq}}$ で65\,dBとなるようにした。
+聴力レベルが低下していても、十分に聞こえることは確認した。
+
+\newpage
+% ------------------------------
+\section{実験結果}
+\label{sec:ResultCalm}
+% ------------------------------
+怒り--落着き対、悲しみ--落着き対、喜び--落着き対に関して、標準刺激(50\%モーフィング音)に対して、
+比較刺激の方が手掛語に示された感情に近いと感じた回答率を実験参加者ごとに算出した。
+結果を図\ref{fig:ExpRsltEmoPercent_Calm}(b)$\sim$(g)に示す。
+図\ref{fig:ExpRsltEmoPercent_Calm}(a)は、\ref{sec:morphCalm}節で述べたモーフィング音声の配置の概念図である。
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsection{若年健聴者実験結果}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+図\ref{fig:ExpRsltEmoPercent_Calm}中段に、(b)怒り-落着き対、(c)悲しみ-落着き対、(d)喜び-落着き対の回答率の、参加者間の平均値と標準偏差を示す。
+なお、\ref{sec:ExpCondition_Calm}節で述べたように感情判断の手掛語は一つの感情ともう片一方の感情を使った。
+感情A-感情Bの対の場合、より感情Aと感じる方を判断させる場合（回答率A\%）と、より感情Bと感じる方を判断させる場合（回答率B\%）である。
+2本の回答曲線を比較しやすいように、Bの回答率は100\%から引いて(100-B)\%で表示している。
+図には、2つの手掛語、模擬難聴処理の有無(Unpro/80yr)の合計4本の回答曲線を表示している。
+
+結果的に、図\ref{fig:ExpRsltEmoPercent_Calm}(b),(c),(d)のいずれの対においても、回答率A\%と(100-B)\%の回答曲線はほとんど重なっていた。
+このことから、手掛語は若年健聴者の感情知覚にほとんど影響しないことがわかった。
+また、全ての対でUnproと80yrの回答曲線がほとんど重なっており、模擬難聴処理は感情弁別に影響していないことを意味する。
+すなわち、模擬している聴覚末梢系の機能低下だけは、感情知覚に影響しないことを示唆する。
+これらの結果は、怒り・悲しみ・喜び実験と同様である。
+
+さらに、感情対間を比較しても、回答曲線における判断が50\%になる点はほとんど差異がない。
+傾きに関しては若干違いがあるように見えるため、\ref{sec:Statistics_Calm}項で統計的に分析する。
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsection{高齢者実験結果}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+図\ref{fig:ExpRsltEmoPercent}下段に、(e)怒り--悲しみ対、(f)怒り--悲しみ対、(g)喜び--怒り対の回答率の、参加者間の平均値と標準偏差を示す。
+図\ref{fig:ExpRsltEmoPercent}(e)、(f)の2本の回答曲線の傾きは、図\ref{fig:ExpRsltEmoPercent}(a)、(b)の若年健聴者の傾きとそれほど相違がないように見えるが、
+手掛語による差異は若年健聴者よりも大きい。
+このことは、怒り--悲しみ対、怒り--悲しみ対に関しては、手掛語による差異は多少あるものの、若年健聴者とおおむね同様な弁別ができたということを示している
+
+対照的に、図\ref{fig:ExpRsltEmoPercent}(g)の喜び--怒り対の傾きは、図\ref{fig:ExpRsltEmoPercent}(e)怒り--悲しみ対、(f)悲しみ--喜び対、
+及び若年健聴者の(d)喜び--怒り対の傾きと比べてかなり緩やかになっている。
+% この結果は、高齢者は「喜び」と「怒り」の弁別が他の感情対と比べて困難であったことを示唆している。
+個人ごとに回答曲線を見ると、全く判断ができず心理物理曲線がほぼ水平になった参加者もいた。
+また、手掛語による差異は、判断のばらつきが大きかったためと考えられる。
+高齢者では、喜び--怒り対の感情弁別が特に難しかったという内観報告が多く見られた。
+その一方で、若年健聴者においてはそのような報告は2件のみであり、どの感情対も同程度の難しさだと報告した参加者がほとんどであった。
+高齢者と若年健聴者の違いは、考慮すべき最も重要な発見であると言えるだろう。
+
+
+
+\input{Fig6_ResultPsycho_Calm.tex}
+
+
+\clearpage
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsection{統計的分析}
+\label{sec:Statistics_Calm}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+上記の観察結果を統計的いに明確化するため、図\ref{fig:ExpRsltEmoPercent}(b)$\sim$(g)の回答曲線に累積ガウス分布を当てはめ、心理物理曲線を推定した。
+そして、50\%の回答率におけるモーフィング率である主観的等値点（PSE）と、50\%と76\%の回答率間のモーフィング率の差である弁別閾（JND）を算出した。
+図\ref{fig:JNDPSE_AngSadHap}(a)にJND、(b)にPSEの、参加者間の平均値と95\%信頼区間を示す。
+上述したように、手掛語によるバイアスはほとんどみられなかったため、反復測定として感情対ごとにまとめた。
+図左側が若年健聴者模擬難聴なし（YNH-Unpro）、中央が若年健聴者模擬難聴あり（YNH-80yr）、右側が高齢者（Older-Unpro）の結果である。
+また、9条件（YNH-Unpro・YNH-80yr・Older-Unpro、感情対すべて）に関してTukey HSDの多重比較検定(有意水準5\%)を行った。
+なお、高齢者1名の喜び--怒り対において、心理物理曲線がほぼ水平になりJND、PSEを正常な範囲内で推定できなかったため欠損値として扱った。
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsubsection{(a)JND}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+図\ref{fig:JNDPSE_AngSadHap}(a)のJNDの平均値に関して、高齢者の喜び--怒り(H--A)対の値が他の感情対の値よりも10\%ほど大きく突出している。
+Tukey HSDの多重比較検定(有意水準5\%)の結果、高齢者の喜び--怒り(H--A)対とその他の全実験条件・感情対で有意差があった。
+他の感情対間に関しては、若年健聴者・高齢者を通して11\% $\sim$ 15\% 程度で大きな違いはなく、95\%信頼区間の範囲も重なっている。 
+また、検定結果に有意差はなく、模擬難聴処理の有無の影響や感情対の相違による差があるとは言えない。
+以上より、今回参加した高齢者にとって、若年健聴者と比較しても、喜び--怒り(H--A)対の判断が他の感情対の判断よりも困難であったことがわかった。
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsubsection{(b)PSE}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+図\ref{fig:JNDPSE_AngSadHap}(b)のPSEに関して、高齢者喜び--怒り(H--A)対の95\%信頼区間の値が他の感情対の値よりも若干大きい結果となった。
+そこで、手掛語を区別して同様の検定を行ったところ、高齢者喜び--怒り(H--A)対の喜び判断と怒り判断の間に有意差があった。
+したがって、高齢者においては喜び--怒り(H--A)対で手掛語により感情判断にバイアスがある可能性が示唆されたが、これは高齢者の中に感情弁別が困難であった参加者がいたためである可能性がある。
+しかしながら、全実験条件・感情対でほぼ50\%に近い値となっている。
+高齢者喜び--怒り(H--A)対を除いた他の条件では、判断にバイアスがなかったことがわかる。
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsubsection{(c)高齢者の聴力レベルによる検討}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+高齢参加者の聴力レベルによる感情弁別特性の違いを調べた。
+高齢参加者を500~Hzから4000~Hzの良耳の平均聴力レベルによって、健聴に近い群（22~dB未満, ONH, 7名）と難聴群（22~dB以上, OHL, 5名）に分けた。
+ONHは、従来の感情認識実験\cite{christensen2019effects}の基準に従い、平均聴力レベルが22dB未満であると仮定した。
+なお、閾値をWHO基準の25dBに設定した場合でも、結果は変わらなかった。
+
+図\ref{fig:JNDPSE_AngSadHap}(c)に参加者間のJNDの平均値と95\%信頼区間を示す。
+図左側から、若年健聴者模擬難聴なし（YNH-Unpro）、ONH、OHLの結果である。
+高齢者難聴群の喜び--怒り(H--A)対とその他の全実験条件・感情対、
+高齢者健聴群の喜び--怒り(H--A)対と高齢者健聴群のその他の感情対・若年健聴者の全感情対で有意差があった。
+この結果は、高齢者は健聴・難聴に関わらず喜び--怒り(H--A)対の弁別が難しかったことを示している。
+さらに、高齢者喜び--怒り(H--A)対では、健聴群と難聴群の間でも有意差が見られたことから、年齢が上がるにつれて弁別が難しくなる可能性が示唆された。
+
+
+
+
+% from Scirep24　高齢者の聴力について
+% 図2cの統計分析では、高齢の参加者を聴力レベルに応じてNH群とHL群（ONHとOHL）に分けた。
+% ONHは、感情認識研究11の基準に従い、500Hz、1000Hz、2000Hz、4000Hzの聴力レベルの平均が、良い方の耳で22dB以下であると仮定した。
+% また、HLシミュレーションの結果、8000Hzの聴力レベルは感情認知に直接影響しない可能性が示唆されたためである。
+% その結果、参加者はONHが7人、OHLが5人となった。
+%  なお、閾値を25dBに設定した場合でも、図2cの有意な関係は不変であった。
+
+\input{Fig4_JNDPSE_AngSadHap.tex}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsection{考察}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+今回得られた結果は、聴覚末梢系の機能低下は感情知覚に影響を与えないことを示唆している。
+この結果は、補聴器は感情弁別能力の向上に貢献しないこと\cite{goy2018hearing} や、
+模擬難聴処理が若年健聴者の「怒り」感情の認識に影響を与えなかった\cite{morgan2022perceived}というこれまでの知見と一致する。
+これらの結果をまとめると、低周波数帯域に現れる韻律情報が感情認識に重要であると言えるだろう\cite{orbelo2005impaired,ben2019age}。
+これまでの感情認識実験で得られた知見は、今回の感情弁別実験によって確認することができた。
+
+さらに興味深いことに、高齢者と若年健聴者で感情の種類によって知覚特性が異なることが示唆された。
+高齢者にとって、「喜び」と「怒り」の弁別が難しく、その一方で、他の感情対では若年健聴者と同程度に弁別することができた。
+また、\ref{sec:Statistics}項で述べたように、高齢者は健聴・難聴に関わらず「喜び」と「怒り」の弁別が難しく、
+難聴群の方がより弁別精度が下がることが示された。
+
+ここで、これらの結果をラッセルの次元説\cite{russell1980circumplex}から解釈することを試みる。
+判断が難しかった「喜び」と「怒り」は、図\ref{fig:PCA-Russel_AngHapSad}(b)のラッセルの円環モデルにおいて「快--不快」軸上で反対側に位置する。
+一方、「覚醒--沈静」軸上では原点より上に位置し、覚醒レベルが同程度である。
+これに対して、「怒り」と「悲しみ」・「悲しみ」と「喜び」に関しては、「覚醒--沈静」軸上で反対側に位置している。
+これらの感情対では若年健聴者と同程度の弁別ができた。
+以上より、高齢者は「覚醒--沈静」の度合いが同程度の場合、「快--不快」の判断が難しい可能性がある。
+
+直感的には、「快--不快」の判断は少なくとも若年健聴者にとっては容易に思われ、年齢が上がるにつれて難しくなっていくとは予想されにくい。
+このことを確かめるためには、「快」かつ「沈静」の象限に位置するCalm（「落着き」）を加えて、今回対象とした3感情との弁別実験を行うことが良いかもしれない。
+% ただし、今回の実験で用いたのが男性1名のみで、限られた単語数の音声であったために、このような結果になった可能性も否定できない。
+
+
+
+% ASJHJan2024
+% 今回得られた結果は、高齢難 聴における末梢系レベルの機能低下は、感情知覚への影響が小 さいということを示唆している。
+% ある意味、「あたりまえ」と捉 えられるかもしれないが、このように明確に示された研究は報告されていないと思われる。
+
+% さらに興味深いのは、感情の種類により、高齢者と若年健聴者で知覚特性が異なることが示唆されたことにある。
+% 判断が難しかった怒りと喜びは、図 2 のラッセルの円環モデルにおいて、 「快-不快」軸上で反対側に位置する。
+% 一方、「覚醒-沈静」軸上では原点より上で覚醒レベルが同程度の位置にある。
+% これに対し、 怒りと悲しみ・悲しみと喜びに関しては、「覚醒-沈静」軸上で は反対側に位置している。
+% これらの間の刺激連続体においては 健聴者と同程度の弁別ができた。
+% これらのことから、高齢者は「覚醒-沈静」の度合いが同程度の場合、「快-不快」の判断が難 しい可能性がある。
+
+% 直感的には「快-不快」の判断の方が容易に 思えるので、この結果の要因が何かがわからない。
+% このことを 確かめるためには、第 4 象限にある Relaxed/At Ease (「安心」) を加えて、安心-悲しみ対や安心-喜び対の実験を行っても良い かもしれない。
+% ただし、今回の実験で用いたのが男性一名の限 られた単語数の音声であったために、このような結果になった 可能性も否定できない。
+
+% 複数話者の実験も必要であろう。
+% この 場合でも、今回用いた模擬難聴と音声モーフィングを用いた独 自の手法を用いることができ、さらなる知見が期待できる。
+% いずれにせよラッセルの円環モデルは心理空間を構成する一 つの仮説にすぎず、音声の物理的特徴量や聴覚的な内部表現と の関連性は明確ではない。
+%  この両者の関係を聴覚モデルを通し て分析することにより、高齢者の感情知覚特性とそれに影響す る要因の解明へアプローチすることも重要であろう。
+
+%Scirep2024
+%模擬難聴の影響について
+% その結果、YNHの加齢に伴う高音域のシミュレーションは、すべての感情ペアにおいて感情弁別に影響を及ぼさなかった。
+% この結果は、補聴器が感情弁別能力を向上させなかった9,12や、HLシミュレーションがNHの怒り認知に影響を与えなかった14という過去の知見と一致する。
+% これらの結果を総合すると、低周波数に現れる音声の韻律情報が感情認知に重要であることが示唆される3,6,10。
+% 感情認識実験から得られた知見は、今回の3つの感情識別研究によって確認された。
+%  HLシミュレーションの影響を受けない感情があるかどうかを明らかにするためには、他の感情を用いた実験を行う必要がある。
+
+%　高齢者ang-hapについて
+%  さらに興味深いことに、年配の参加者はAngとHapの識別が困難であったが、図2aに示すように、他のペアではYNHの識別能力に近かった。
+% 図2cは、AngとHapの識別がONHでは難しく、OHLではより難しいことを示している。
+% われわれの知る限り、このような観察は報告されていないようである。
+% 若年者と中年者の感情弁別／カテゴリー知覚実験に関する論文4がある。
+%  そこでは、恐怖-幸福、幸福-悲しみのペアでは、幸福の識別が相対的に悪くなることが報告されている。残念ながら、HLや年齢の異なる条件間での比較は行われていない。
+% そのため、似たようなことを言うのは難しいが、幸福の根底にある認識について何らかの洞察を与えてくれるかもしれない。
+% また、Ang-Hapペアにおける年齢効果を、若年から高齢まで幅広い年齢のNHおよびHL参加者を用いた実験で、4つの感情（嬉しい、悲しい、怖い、怒っている）すべてに年齢効果が観察された感情認知研究11の結果からのみ解釈することは難しいようだ。
+%  また、年齢とともに感情認知の精度が低下することも報告されている7,10,13。
+%  しかし、Hap-Angペアと他のペアとの間の非対称性を、これらの観察結果だけで説明するのは難しいように思われる。
+
+%　↑に対する解釈、ラッセル
+%  次に、カテゴリー知覚の結果を次元コア感情理論から解釈することを試みる。
+% 図3aは、感情評価のPCAの結果を示しており、図1aに示した刺激セットを生成するために使用される（方法のセクションを参照）。
+% Ang、Sad、Hapの感情の位置は、図1bに示すラッセルの円周モデルとほぼ一致している。
+%  AngとHapは、年配の参加者にとって犯罪を判別するのが難しく、快／不快軸の反対側に位置している。
+% 一方、高齢者とYNH参加者でほぼ同じJNDでAngやHapと弁別されたSadは、低い覚醒レベルにある。
+% このことから、高齢者では、覚醒度が同程度の場合、快・不快の弁別が困難である可能性が示唆される。
+% このことを確認するためには、第4象限の「穏やか」または「穏やか」と3つの感情（Sad、Hap、Ang）の組み合わせについて弁別実験を行うのがよいかもしれない。
+
+%　聴覚モデルについて
+% 新しい補聴器のアルゴリズムに関する2つ目の研究課題に答えるためには、結果を説明する聴覚モデルを開発することが不可欠です。
+%  上記の仮説は、覚醒度に関連しうる韻律情報のダイナミクスが類似している場合、高齢者は感情の識別が困難であると言い換えることができる。
+% 予備的な分析では、基本周波数Foの変動はAng語とHap語の間で同程度であり、Sad語のそれよりも有意に大きかった。
+%  この分析だけでは聴覚系の機能障害を特定するには不十分であるため、高齢者の音声分析をシミュレートできる聴覚モデルを開発する必要がある。
+% 例えば、聴覚フィルターバンクと変調フィルターバンクを備えたモデルがあり、HLと劣化した時間応答を導入することができる24,29,30。
+% このモデルは、考えられる機能障害を理解し、感情知覚をサポートする効果的なアルゴリズムを開発するのに役立つだろう。
+
+%　今後の課題
+% この結果は直感に反する。というのも、快と不快の差は、少なくともNHの人においてはかなり明白であるように思われ、年齢が上がるにつれて変化するとは予想されなかったからである。
+% その原因はまだ不明であり、加齢に伴う末梢HLではこの結果は説明できない。
+%  今回の実験では、男性話者が発音した限られた単語しか使用していないため、より良い理解のためには、より多くの実験データを収集する必要がある。
+%  より多くの男女の話者と異なる種類の刺激を用いた実験が必要である。
+% また、Hap、Sad、Ang、その他の感情など、異なるペア間での識別実験も必要である。
+% この場合、実験回数はnC2（nは対象感情の数）と組み合わせ論的に増加するので、感情の選択は慎重に行う必要がある。
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsection{まとめ}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+高齢者の感情音声知覚特性を調べるために、3感情間のモーフィング音声を用いて、若年健聴者と高齢者を対象に弁別実験を実施した。
+若年健聴者には通常音声と模擬難聴音を、高齢者には同じ通常音を聞かせ、計3条件間の対比を行った。
+その結果、若年健聴者実験では模擬難聴処理の有無でJND、PSEに有意差は無く、聴覚末梢系の機能低下は感情知覚に影響しない可能性が示唆された。
+高齢者実験では、喜び--怒りの判断だけが著しく難しいことがわかった。
+すなわち、高齢者はラッセルの感情円環モデルにおいて、「覚醒--沈静」の度合いが同程度の場合、「快--不快」の判断が難しい可能性がある。
+したがって、第4象限に位置するCalm（「落着き」）を加えて弁別実験を行うことが、要因解明の手がかりになるかもしれない。
+
