--- a/Thesis2025_Hanatani/Thesis2025/3_ExpAngHapSad.tex
+++ b/Thesis2025_Hanatani/Thesis2025/3_ExpAngHapSad.tex
@@ -288,7 +288,7 @@ ONHは、従来の感情認識実験\cite{christensen2019effects}の基準に従
 \input{Fig4_JNDPSE_AngSadHap.tex}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{考察}
+\section{考察}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 今回得られた結果は、聴覚末梢系の機能低下は感情知覚に影響を与えないことを示唆している。
 この結果は、補聴器は感情弁別能力の向上に貢献しないこと\cite{goy2018hearing} や、
@@ -380,7 +380,7 @@ ONHは、従来の感情認識実験\cite{christensen2019effects}の基準に従
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{まとめ}
+\section{まとめ}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 高齢者の感情音声知覚特性を調べるために、3感情間のモーフィング音声を用いて、若年健聴者と高齢者を対象に弁別実験を実施した。
 若年健聴者には通常音声と模擬難聴音を、高齢者には同じ通常音を聞かせ、計3条件間の対比を行った。
