--- a/Thesis2025_Hanatani/Thesis2025/Fig5_RusselPCA_Calm.tex
+++ b/Thesis2025_Hanatani/Thesis2025/Fig5_RusselPCA_Calm.tex
@@ -9,6 +9,7 @@
   \includegraphics[width=0.8\hsize]{Figure/ExpCalm/FigPCA3d_CumAll_cal2_scatter_SndTriangle_Eng.eps}
   \caption{感情尺度評定の主成分分析(PCA)結果。各点(x)は、怒り,悲しみ,喜び,落着きの評価を行って得られたPCAスコアを示す。
             "Ang"怒り,"Sad"悲しみ,"Hap"喜び,"Cal"落着き。 見やすさのため3次元で描画している。}
+  \label{fig:PCA-Russel_Calm} 
 \end{figure}
 % --------------------------------------------
 
