--- a/Thesis2025_Hanatani/Thesis2025/5_Summary.tex
+++ b/Thesis2025_Hanatani/Thesis2025/5_Summary.tex
@@ -5,6 +5,11 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{本論文のまとめ}
-\label{sec:}
+\label{sec:Summary}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-本報
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{今後の課題と展望}
+\label{sec:Challenges}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
