--- a/Thesis2025_Hanatani/Thesis2025/1_Intro.tex
+++ b/Thesis2025_Hanatani/Thesis2025/1_Intro.tex
@@ -67,7 +67,7 @@
 WHISを用いて実験を行う理由は以下である。
 加齢性難聴の原因は様々であり、聴覚末梢系の機能低下によるものか、中枢系・認知系の機能低下によるものかの切り分けが困難である。
 どの原因がどの程度感情知覚に影響するのかを段階的に調査するために、まずは模擬難聴処理で聴覚末梢系の機能低下だけを模擬することにした。
-したがって、WHISで処理した音声を聞いた若年健聴者を「模擬難聴者」として実験を行う（詳しくは,第\textcolor{red}{☆☆☆}章で説明する）。
+したがって、WHISで処理した音声を聞いた若年健聴者を「模擬難聴者」として実験を行う（詳しくは第\ref{chap:ExpAngHapSad}章で説明する）。
 
 2つ目は、高齢者実験である。
 若年健聴者実験と同じ通常音声・手順で実験的に測定を行う。
@@ -104,8 +104,15 @@ WHISを用いて実験を行う理由は以下である。
 \section{\textcolor{red}{本論文の構成}}
 %%%%%%%%%%%%%
 \label{sec:本論文の構成}
-【copied 2022】本論文は,本章を含め6章で構成されている.第1章では,本研究の背景と目的について示した.第2章では,聴覚に関する基本的な知識と,音声と感情知覚に
-関する知識,先行研究について説明する.第3章では,本実験の詳細な手続きを述べる.第4章では実験結果と統計的分析を行なった結果を示し,第5章で考察を述べる.
-最後に,第6章にて本研究についてまとめる.
-\textcolor{red}{図目次は？？いるか確認}
+本論文は、本章を含めて5章で構成されている。
+第1章では、本研究の背景と目的について示した。
+第2章では、聴覚に関する基本的な知識と、音声と感情知覚に関する従来研究について説明する。
+第3章では、怒り・悲しみ・喜び間の弁別実験について、詳細な手続きを述べた上で、結果についてまとめる。
+第4章では、落着きと怒り・悲しみ・喜び間の弁別実験について、手続きと結果についてまとめる。
+また、第3章の怒り・悲しみ・喜び実験の結果と比較検討する。
+最後に、第5章で本研究について総括する。
+
+% 【copied 2022】本論文は,本章を含め6章で構成されている.第1章では,本研究の背景と目的について示した.第2章では,聴覚に関する基本的な知識と,音声と感情知覚に
+% 関する知識,先行研究について説明する.第3章では,本実験の詳細な手続きを述べる.第4章では実験結果と統計的分析を行なった結果を示し,第5章で考察を述べる.
+% 最後に,第6章にて本研究についてまとめる.
 
