--- a/Thesis2025_Hanatani/Thesis2025/5_Summary.tex
+++ b/Thesis2025_Hanatani/Thesis2025/5_Summary.tex
@@ -9,7 +9,27 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
+%Mod
+% しかし、なぜ喜び-怒り対だけが有意に弁別しにくいのかの原因はわかっていない。少なくとも健聴者にとっては両者の違いは明確なので、直感に反する。
+% 韻律情報のダイナミックスが類似している可能性を考え、基本周波数の分散の比較も予備的に行ったが、これだけでは十分な説明はできそうになかった。
+
+%相関
+% 年齢・聴力・TMTFとの相関結果
+
+%音声の基本周波数
+
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{今後の課題と展望}
 \label{sec:Challenges}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+% このため、弁別実験における判断も感情そのものではなく、その音声の特徴に基づいて行われた可能性がある。
+% しかし、印象と特徴と言った抽象的な言葉への置き換えではなく、計算論的に解明できることが必要で、
+% これこそ感情伝達の支援システムの構築の基盤となる。いずれにせよ、まだ十分解明できていない段階であり、
+% 次の段階として男女複数話者の音声を用いて弁別実験を行い特性を把握する必要がある。
+% そのための感情音声収集は行われており、今後の研究が期待される。
+
+% この実験により、模擬難聴により末梢系機能の切り分けをした議論の可能性は示せたと考える。
+% さらに、高齢者の感情知覚特性の一端を垣間見る良い機会となったことは確かであろう。
