--- a/Thesis2025_Hanatani/Thesis2025/5_Summary.tex
+++ b/Thesis2025_Hanatani/Thesis2025/5_Summary.tex
@@ -7,8 +7,7 @@
 \section{本論文のまとめ}
 \label{sec:Summary}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
+高齢者の感情知覚特性について新たな知見を得ることを目的に、若年健聴者と高齢者を対象に2種類の感情弁別実験を実施した。
 %Mod
 % しかし、なぜ喜び-怒り対だけが有意に弁別しにくいのかの原因はわかっていない。少なくとも健聴者にとっては両者の違いは明確なので、直感に反する。
 % 韻律情報のダイナミックスが類似している可能性を考え、基本周波数の分散の比較も予備的に行ったが、これだけでは十分な説明はできそうになかった。
