--- a/Thesis2025_Hanatani/Thesis2025/Fig1_RusselPCA.tex
+++ b/Thesis2025_Hanatani/Thesis2025/Fig1_RusselPCA.tex
@@ -11,7 +11,8 @@
   
   \begin{minipage} {0.47\hsize}
   \centering
-  \includegraphics [ width = 1\columnwidth]{Figure/ExpAngHapSad/Fig_RusselCircle_b.eps }
+  % \includegraphics [ width = 1\columnwidth]{Figure/ExpAngHapSad/Fig_RusselCircle_b.eps }
+  \includegraphics [ width = 1\columnwidth]{Figure/ExpAngHapSad/Fig_RusselCircle_b_JLabel.eps }
   \end{minipage}
   
   \end{tabular}
