--- a/Thesis2025_Hanatani/Thesis2025/3_ExpAngHapSad.tex
+++ b/Thesis2025_Hanatani/Thesis2025/3_ExpAngHapSad.tex
@@ -23,6 +23,7 @@
 \label{sec:PrepareStimuli}
 % ------------------------------
 感情を最もよく表現する音声の抽出を行い、音声モーフィングと模擬難聴処理で実験刺激を作成した。
+\textcolor{red}{3人で分担してやった}
 
 % ------------------------------
 \subsubsection{感情音声の再分類 \textcolor{red}{付録にスクリーニング結果入れる？}}
@@ -80,7 +81,7 @@ PC2まで、累積寄与率84\%を占めた。
 その上で、モーフィング率を指定して実行すると、この2つのスペクトル間を線形補完するようにスペクトル変形がなされ合成音が生成される。
 ここでは、モーフィング率が 0,20,40,50,60,80,100\%の音声を合成した(0\%, 100\%の音声も分析合成系の影響を入れ込むため、合成している)。
 合成した音声を聞き、モーフィング音声の劣化がなるべく小さくなるように特徴点の位置を繰り返し調整した。
-実験者3名で、3組の感情対（「怒り-悲しみ」「悲しみ-喜び」「喜び-怒り」）を分担して作業を行った。
+実験者3名で、3組の感情対（「怒り--悲しみ」「悲しみ--喜び」「喜び--怒り」）を分担して作業を行った。
 最後に、全員が全ての合成音を聴取し、音質の確認を行った。
 確認した結果、1単語「おぼろづきよ」は他の単語よりモーフィングの際の劣化が目立ち、歪みを小さくすることができなかった。
 % また、感情単語として使われる状況を想像しやすいとは思えない。
