--- a/Thesis2025_Hanatani/Thesis2025/1_Intro.tex
+++ b/Thesis2025_Hanatani/Thesis2025/1_Intro.tex
@@ -11,7 +11,7 @@
 \section{研究背景}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \label{sec:研究背景}
-超高齢社会となった日本では、加齢性難聴(老人性難聴)者の増加が懸念されている。
+超高齢社会となった日本では、加齢性難聴者の増加が懸念されている。
 聴力低下は、音声による対人コミュニケーションを妨げ、生活の質(QOL)の低下を招く。
 また、認知症リスクを高める最大要因であることがLancet委員会により報告されている\cite{livingston2020dementia}。
 高齢者との円滑なコミュニケーションのためには、音声の言語情報ばかりではなく、感情を含む非言語情報も重要である。
@@ -19,11 +19,11 @@
 これまでに、加齢により感情認識精度が低下することが報告されている\cite{paulmann2008aging,ben2019age,amorim2021changes}。
 特に否定的な感情に関して低下するという報告もある\cite{mill2009age}。
 また、従来からの補聴器で音声了解度の改善は行うことができるが、感情伝達特性の向上には貢献しないことが報告されている\cite{goy2018hearing}。
-感情知覚機能の低下が、末梢系の機能低下による聴力レベルの要因だけとは考えられてはいない。
-しかし、明確にそのことを示す実験データは存在しないようである。
+感情知覚機能の低下の要因は、聴覚末梢系の機能低下による聴力レベルによるものだけとは考えられてはいない。
+しかしながら、明確にそのことを示す実験データは存在しないようである。
 また、末梢系から認知系のどの部位の機能低下によるものかも解明されていない。
 そこで、まずは聴覚末梢系の機能低下だけが、感情知覚にどの程度影響するかの調査を試みた。
-そこでは、若年健聴者に模擬難聴処理を行った音声を聴かせ、通常音声を聴いた場合との感情知覚の相違を実験的に検討した。
+若年健聴者に模擬難聴処理を行った音声を聴かせ、通常音声を聴いた場合との感情知覚の相違を実験的に検討した。
 さらに、高齢者の感情知覚特性を、同じ通常音声を用いて同じ手順で測定した。
 若年健聴者との相違から知覚特性の情報を得ることを目指した。
 
@@ -59,8 +59,9 @@
 \label{sec:研究目的}
 
 本研究の目的は、高齢者の感情知覚特性について調査することである。
-そのために、2つの実験を実施する。
+将来的には、その特性を定式化し、補聴器の開発や高齢者との円滑なコミュニケーションに貢献することを目標としている。
 
+本研究では、2つの実験を実施する。
 1つ目は、若年健聴者実験である。
 若年健聴者に難聴者の聞こえを体験させる「模擬難聴システムWHIS」（以下WHIS）を用いた聴取実験を行い、模擬難聴が感情知覚に与える影響を調査する。
 通常音声を聞いた場合と、模擬難聴処理した音声を聞いた場合の結果に差異があるかどうかを確かめる。
@@ -75,8 +76,8 @@ WHISを用いて実験を行う理由は以下である。
 また、聴覚末梢系の機能低下以外の要因も調査できると考え、実施することにした。
 
 これらの実験から、若年健聴者が通常音声を聞いた場合・若年健聴者が模擬難聴処理音声を聞いた場合・高齢者が通常音声を聞いた場合の
-感情音声の弁別性能を比較する。
-これらの3条件の違いから、高齢者の感情知覚特性について新たな知見を得ることを目的とした。
+感情音声の弁別精度を比較する。
+以上の3条件の違いから高齢者の感情知覚特性について新たな知見を得ることを目的に実験を行った。
 
 
 %SciRep
@@ -101,7 +102,7 @@ WHISを用いて実験を行う理由は以下である。
 
 
 %%%%%%%%%%%%%
-\section{\textcolor{red}{本論文の構成}}
+\section{本論文の構成}
 %%%%%%%%%%%%%
 \label{sec:本論文の構成}
 本論文は、本章を含めて5章で構成されている。
