--- a/Thesis2025_Hanatani/Thesis2025/2_RelatedResearch.tex
+++ b/Thesis2025_Hanatani/Thesis2025/2_RelatedResearch.tex
@@ -13,7 +13,7 @@
 
 
 %--------------
-\section{聴覚系の全体像}
+\section{聴覚系の概要}
 \label{sec:Auditory}
 %--------------
 %参考　山本さん修論 
@@ -340,8 +340,9 @@ WHISでは、健聴者の内部表現としての励起パターンを$EP^{(HI)}
 
 % ----------------------------------%
 \begin{figure}[t]
-  %\vspace{-50pt}
-   \centerline{\includegraphics[width=1.05\linewidth, bb= 0 0 863 803]{Figure/RelatedResearch/Fig_EP_HI=NH+WHIS.eps}}
+   \vspace{-50pt}
+%    \centerline{\includegraphics[width=1.05\linewidth, bb= 0 0 863 803]{Figure/RelatedResearch/Fig_EP_HI=NH+WHIS.eps}}
+   \centerline{\includegraphics[width=1.05\linewidth]{Figure/RelatedResearch/Fig_EP_HI=NH+WHIS_v2.eps}}
    \vspace{0pt}
    \caption{蝸牛とシステムの入出力特性の模式図。(a) 難聴者, (b) 健聴者, (c) 模擬難聴システムWHIS。
    入出力関数にしたがって、入力信号は処理され励起パターン(Excitation Pattern, EP)が出力される。難聴者を$EP^{(HI)}$とし、WHISによる模擬難聴出力音を健聴者を聞く場合$EP^{(NH+WHIS)}$とすると、両者の差を小さくすることがWHISの目標となる。文献\cite{irino2023hearing}より引用。
