--- a/Thesis2025_Hanatani/Thesis2025/3_ExpAngHapSad.tex
+++ b/Thesis2025_Hanatani/Thesis2025/3_ExpAngHapSad.tex
@@ -65,7 +65,7 @@ PC2まで、累積寄与率84\%を占めた。
 
 % \newpage
 % ------------------------------
-\subsubsection{音声モーフィング}
+\subsubsection{音声モーフィング \textcolor{red}{詳細は付録****へ}}
 \label{sec:morphAngSadHap}
 % ------------------------------
 
@@ -112,7 +112,7 @@ PC2まで、累積寄与率84\%を占めた。
 
 \newpage
 % ------------------------------
-\section{実験手順と実験条件}
+\section{実験手順と実験条件\textcolor{red}{実験webのスクショを入れる,webページの雛形のgiturlも引用する}}
 \label{sec:ExpCondition}
 % ------------------------------
 前節で述べた実験刺激を用いて、若年健聴者と高齢者を対象に感情弁別実験を行った。
@@ -235,7 +235,7 @@ PC2まで、累積寄与率84\%を占めた。
 \subsection{統計的分析}
 \label{sec:Statistics}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-上記の観察結果を統計的いに明確化するため、図\ref{fig:ExpRsltEmoPercent}(b)$\sim$(g)の回答曲線に累積ガウス分布を当てはめ、心理物理曲線を推定した。
+上記の観察結果を統計的いに明確化するため、図\ref{fig:ExpRsltEmoPercent}(b)$\sim$(g)の回答曲線に累積ガウス分布\textcolor{red}{p-dignifitを使った、文献も引く}を当てはめ、心理物理曲線を推定した。
 そして、50\%の回答率におけるモーフィング率である主観的等値点（PSE）と、50\%と76\%の回答率間のモーフィング率の差である弁別閾（JND）を算出した。
 図\ref{fig:JNDPSE_AngSadHap}(a)にJND、(b)にPSEの、参加者間の平均値と95\%信頼区間を示す。
 上述したように、手掛語によるバイアスはほとんどみられなかったため、反復測定として感情対ごとにまとめた。
@@ -312,7 +312,7 @@ ONHは、従来の感情認識実験\cite{christensen2019effects}の基準に従
 直感的には、「快--不快」の判断は少なくとも若年健聴者にとっては容易に思われ、年齢が上がるにつれて難しくなっていくとは予想されにくい。
 このことを確かめるためには、「快」かつ「沈静」の象限に位置するCalm（「落着き」）を加えて、今回対象とした3感情との弁別実験を行うことが良いかもしれない。
 % ただし、今回の実験で用いたのが男性1名のみで、限られた単語数の音声であったために、このような結果になった可能性も否定できない。
-
+\textcolor{red}{考察の概念図入れる}
 
 
 
