--- a/Thesis2025_Hanatani/Thesis2025/2_RelatedResearch.tex
+++ b/Thesis2025_Hanatani/Thesis2025/2_RelatedResearch.tex
@@ -360,28 +360,28 @@ WHISでは、健聴者の内部表現としての励起パターンを$EP^{(HI)}
 \section{\textcolor{red}{感情音声知覚について}}
 %================================================================================================================================
 
-% % ------------------------------
-% \subsection{音声と言語\cite{furui1985digital}}
-% \label{sec:Speech}
-% % ------------------------------ %参考：東山さん修士論文　
-% 音声は人間が用いるコミュニケーション手段の中で最も基本的なものである。
-% 普段の生活の中でのコミュニケーションにおいて最も重要なのは、相手に伝えたい意味内容、すなわち言語情報である。
-% またこの音声の中には、話者が誰であるかという個人性情報、話者の感情を表現する情緒性情報など様々な情報が含まれている。
-% \par
-% 文を形作る基礎は単語(word)であり、各単語は音節(syllable)から成り立ち、音節は音素(phoneme)から成り立つ。
-% 音素には母音(vowel)と子音(consonant)がある。
-% 音節の定義は必ずしも明確ではないが、普通1つの音節は1つの母音もしくは1つの母音と複数の子音が結合してできている。
-% 日本語には、外来語を表現するため特殊なものを除いて101の音節があり、それぞれ仮名と対応している。
-% 日本語には5種類の母音と、分類方法にもよるが、およそ20種類の子音がある。
-% \par
-% 上述のように、言語学的(音韻論的)な意味での音声の最小基本単位を「音素」と呼び、音声を実際に発声したときに生ずる音声学的な最小基本単位を「単音」と呼ぶ。
-% 前者は音韻記号、後者は音声記号を用いて、それぞれ/a/,[a]というように表す。
-% \par
-% アクセント(accent)、強勢(stress)および抑揚(イントネーション;intonation)も言語学的構成の一部であり、音声の強さや高さの時間的変化によって表現される。
-% アクセントは、連続する音声の中の特定の単語または音節の強さあるいは高さを変えて、他の単語または音声との違いを設け、言葉の意味を明確にする手段である。
-% 強勢はある音節を他よりも強めるためにその音節に加えられる呼気の強さをいう。
-% イントネーションは、単語や句、文などの言語単位に、その意味、疑問文の区別、強調、話し手の感情などを伝達するために与える声の高さの変化の様相のことをいい、
-% 音調曲線とも呼ばれる。
+% ------------------------------
+\subsection{音声と言語\cite{furui1985digital}}
+\label{sec:Speech}
+% ------------------------------ %参考：東山さん修士論文　
+音声は人間が用いるコミュニケーション手段の中で最も基本的なものである。
+普段の生活の中でのコミュニケーションにおいて最も重要なのは、相手に伝えたい意味内容、すなわち言語情報である。
+またこの音声の中には、話者が誰であるかという個人性情報、話者の感情を表現する情緒性情報など様々な情報が含まれている。
+\par
+文を形作る基礎は単語(word)であり、各単語は音節(syllable)から成り立ち、音節は音素(phoneme)から成り立つ。
+音素には母音(vowel)と子音(consonant)がある。
+音節の定義は必ずしも明確ではないが、普通1つの音節は1つの母音もしくは1つの母音と複数の子音が結合してできている。
+日本語には、外来語を表現するため特殊なものを除いて101の音節があり、それぞれ仮名と対応している。
+日本語には5種類の母音と、分類方法にもよるが、およそ20種類の子音がある。
+\par
+上述のように、言語学的(音韻論的)な意味での音声の最小基本単位を「音素」と呼び、音声を実際に発声したときに生ずる音声学的な最小基本単位を「単音」と呼ぶ。
+前者は音韻記号、後者は音声記号を用いて、それぞれ/a/,[a]というように表す。
+\par
+アクセント(accent)、強勢(stress)および抑揚(イントネーション;intonation)も言語学的構成の一部であり、音声の強さや高さの時間的変化によって表現される。
+アクセントは、連続する音声の中の特定の単語または音節の強さあるいは高さを変えて、他の単語または音声との違いを設け、言葉の意味を明確にする手段である。
+強勢はある音節を他よりも強めるためにその音節に加えられる呼気の強さをいう。
+イントネーションは、単語や句、文などの言語単位に、その意味、疑問文の区別、強調、話し手の感情などを伝達するために与える声の高さの変化の様相のことをいい、
+音調曲線とも呼ばれる。
 
 % ------------------------------
 \subsection{感情の心理学論}
