--- a/Thesis2025_Hanatani/Thesis2025/Reference_29Dec24b.bib
+++ b/Thesis2025_Hanatani/Thesis2025/Reference_29Dec24b.bib
@@ -5357,3 +5357,14 @@ Praat, a system for doing phonetics by computer.
   year={2021}
 }
 
+@inproceedings{kawahara2024WORLDGUI,
+  title={任意事例数多属性時変音声・歌唱モーフィングのWORLDへの移行とインタフェースの設計について},
+  author={河原英紀 and 森勢将雅},
+  booktitle={音学シンポジウム2024, 情報処理学会研究報告},
+  volume={24},
+  number={2024-SLP-152},
+  pages={1--6},
+  year={2024},
+}
+
+
